--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/表达意愿/合理.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/表达意愿/合理.md
@@ -2,7 +2,7 @@
 [如何看待中国大学的宿舍制度?](https://www.zhihu.com/question/31409652/answer/2255485486)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-03-16]
+> Last update: [编辑于 2023-07-11]
 > Link: [[不抱怨]] [[与世界为敌]] [[WhatThen]] [[个人问题]] [[错误方法]] [[服从]] [[期望]] [[体验痛苦]] [[尊重的实践]] [[当然反驳权]] [[恋爱原理]] [[疯王]] [[败事有余]] [[不破例]] [[合谁的理]]
 > Tag: #1-家族/1F-亲子/1-身为父母 #1-家族/1E-两性/1-亲密关系/1a-交往准则/银子弹 #合集/合集1-概念与定义
 > 评论区:
@@ -110,7 +110,7 @@ ta们只是强烈的感觉到你不是个成熟的人，靠不住，委托给你
 
 Like you are made of cellophane.
 
-[Mr Cellophane​b23.tv/ghKFTqg](https://link.zhihu.com/?target=https%3A//b23.tv/ghKFTqg)
+[Mr Cellophane](https://link.zhihu.com/?target=https%3A//b23.tv/ghKFTqg)
 
 **这个链接留着，将来你看得懂的时候多看几遍。**
 
@@ -138,7 +138,7 @@ Like you are made of cellophane.
 
 还有李察基尔帮你打官司呢。
 
----
+--------------------
 
 此外，父母们也要注意。
 
@@ -252,7 +252,7 @@ ta一定把你示范的这套枪法学得深入骨髓。
 
 把全部的心思，用在去发现“**不增加成本**或**增加投资可以获得净回报**的、**有现实的过渡路径的、在对方自己也相信的人能力范围之内的**更好的方案”上、去有效率的向ta们证明这一点上。
 
-用在克制不说“我不满意”上。
+用在克制“我不满意”上。
 
 这就是空手入白刃。
 
