--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/198-1. 态度与伦理/马鹿头.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/198-1. 态度与伦理/马鹿头.md
@@ -2,7 +2,7 @@
 [我是班长，舍友没做核酸，并且想让我帮忙隐瞒，但是我还是上报了，现在关系很僵怎么办？](https://www.zhihu.com/question/555208211/answer/3100401002)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-07-02]
+> Last update: [编辑于 2023-07-15]
 > Link:
 > Tag: #1-家族/1B-处世/2-外务/2b-礼节规范 #1-家族/1C-安全/1-自我保护/1c-自救策略 #2-事业/2C-职业/1-态度与伦理 
 > 评论区:
@@ -30,7 +30,7 @@
 
 一共三年减刑额度，谁先交代谁减刑，你觉得一个一开始就盘算着走歪门邪道的人会比你犹豫更久吗？
 
-公门之中好修行，你不是不能帮忙，但你不能帮任何可以被举报后导致渎职罪成立的忙，你一帮就等于把脑袋伸进了鳄鱼嘴。
+公门之中好修行，你不是不能帮忙，但你不能帮任何被举报后会导致渎职罪成立的忙，你一帮就等于把脑袋伸进了鳄鱼嘴。
 
 做公务员，怎么把原则之内可帮的忙切得薄薄的，少量多次，做得富有获得感，让亲戚朋友的耐心和决心不至于击穿这个合法帮助极限，是一种基本功课。
 
