--- a/【本周更新】/反驳人.md
+++ b/【本周更新】/反驳人.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-16]
 > Link:
-> Tag: [处世, 最近更新]
+> Tag: #1-家族/1A-内外/1-内在建设/1d-自强 #1-家族/1D-心理/2-抑郁 
 > 评论区:
 > 泛讨论:
 
