--- a/【本周更新】/祭祀.md
+++ b/【本周更新】/祭祀.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-11]
 > Link:
-> Tag: [社科, 最近更新]
+> Tag:  #4-世界史/4D-历史 #4-世界史/4F-文艺/1-文化
 > 评论区:
 > 泛讨论:
 
