--- a/【本周更新】/长安三万里.md
+++ b/【本周更新】/长安三万里.md
@@ -1,10 +1,10 @@
-# 短标题
+# 长安三万里
 [如何评价追光动画新片《长安三万里》？值得去影院看吗？](https://www.zhihu.com/question/609959903/answer/3115995514)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-13]
 > Link:
-> Tag: [文艺, 最近更新]
+> Tag: #4-世界史/4G-文娱/2-影视 #4-世界史/4F-文艺/1-文化 
 > 评论区:
 > 泛讨论:
 
