--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/文责意识/讨厌的梗.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/文责意识/讨厌的梗.md
@@ -1,8 +1,8 @@
 # 讨厌的梗
-*你最讨厌什么梗?*
+[你最讨厌什么梗?](https://www.zhihu.com/question/283854005/answer/611294931)
 
 > Author: #0-Anonymity
-> Last update: *23/07/2021*
+> Last update: [编辑于 2019-03-01]
 > Link: [[躲避现实]] [[败事有余]] [[血滴子]] [[微信语音]]
 > Tag: #1-家族/1B-处世/2-外务/2d-文责意识
 > 评论区:
