--- a/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/励志.md
+++ b/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/励志.md
@@ -1,9 +1,9 @@
-# “励志”
-*2021 年 4 月 8 日南京大学 19 幢有同学跳楼，发生了什么？*
+# 励志
+[2021 年 4 月 8 日南京大学 19 幢有同学跳楼，发生了什么？](https://www.zhihu.com/question/453521350/answer/1829954173)
 
 > Author: #0-Anonymity
-> Last update: *23/07/2021*
-> Link:
+> Last update: [编辑于 2021-07-16]
+> Link: [[理想]]
 > Tag: #1-家族/1D-心理/2-抑郁 #1-家族/1F-亲子/1-身为父母 #2-事业/2A-功夫/1-核心能力/做计划
 > 评论区:
 > 泛讨论:
