--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/立志/宏大叙事.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/立志/宏大叙事.md
@@ -2,7 +2,7 @@
 [年轻人应该如何看待宏大叙事？](https://www.zhihu.com/question/510017625/answer/3105582820)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-07-06]
+> Last update: [编辑于 2023-07-19]
 > Link: [[世界史]]
 > Tag: #1-家族/1A-内外/1-内在建设/1e-立志 #4-世界史/4A-社科/自然法
 > 评论区: [[评论区_宏大叙事]]
@@ -36,27 +36,17 @@
 
 这首先固然是因为痛苦是不可避免的——趁早断了不必劳累、不必担忧、不必焦虑、不必渴求的念想。
 
-无论你有几个亿，这些东西一样都不会少，只是会换各种为你量身定做的花样而已。穷人总在幻想富人不必承受这些，拿着一些自欺欺人、甚至就是想要向你兜售幻梦的人的伪证支撑自己的希望。
+无论你有几个亿，这些东西一样都不会少，只是会换各种为你量身定做的花样而已。穷人总在幻想富人不必承受这些，拿着一些自欺欺人、甚至就是想要向你兜售幻梦的人的伪证支撑自己的希望。其实等你真拿到几个亿，你会知道这话到底对不对。
 
-其实等你真拿到几个亿，你会知道这话到底对不对。
+痛苦本身不可避免，唯一的问题，是如何救赎它。而唯一能真正有效救赎不可逃避的痛苦的，就是“宏大叙事”。
 
-痛苦本身不可避免，唯一的问题，是如何救赎它。
-
-而唯一能真正有效救赎不可逃避的痛苦的，就是宏大叙事。
-
-你免不了受苦，你越是拒绝受苦，你越是会落入更被动、更没有选择、更残酷的痛苦之中去。
-
-你只能选择主动接受部分痛苦。
-
-而使得你所主动选择的痛苦变得可以承受的唯一安慰，就是它们的意义。
+你免不了受苦，你越是拒绝受苦，你越是会落入更被动、更没有选择、更残酷的痛苦之中去。你只能选择主动接受部分痛苦，而使得你所主动选择的痛苦变得可以承受的唯一安慰，就是它们的意义。
 
 如果你找不到这个意义，你就会选择回避一切痛苦——这通常意味着以毒品自杀，或者直接自杀。
 
-你必须找到属于你自己的宏大叙事。
+你必须找到属于你自己的宏大叙事。再说一遍——你必须找到属于你自己的宏大叙事。
 
-再说一遍——你必须找到属于你自己的宏大叙事。
-
-真正的问题，不在于宏大叙事本身，而在于关心你的人知道宏大叙事是正面承受痛苦、乃至于化苦为豪、化苦为乐的唯一的出路，所以看着你一滩烂泥样，为你发急。
+真正的问题不在于宏大叙事本身，而在于关心你的人知道宏大叙事是正面承受痛苦、乃至于化苦为豪、化苦为乐的唯一的出路，所以看着你一滩烂泥样，为你发急。
 
 爹妈怕你自杀。
 
