--- a/【文章目录】/【2 - 信仰类】/神学答集/无爱信仰.md
+++ b/【文章目录】/【2 - 信仰类】/神学答集/无爱信仰.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-08-11]
-> Link: [[爱]] [[无条件的爱]] [[以爱应恨]] [[爱与自由]] [[可信]] [[知行合一]] [[注定]] [[信仰是什么]] [[信仰自由]] [[独立思考]] [[别想骗我]] [[注定]] [[认错]] [[不可论断人]] [[中国的不足]]
+> Link: [[爱]] [[无条件的爱]] [[以爱应恨]] [[爱与自由]] [[可信]] [[知行合一]] [[注定]] [[信仰是什么]] [[信仰自由]] [[独立思考]] [[别想骗我]] [[注定]] [[认错]] [[不可论断人]] [[【文章目录】/【5 - 社会科学】/570 - 政治/573 - 中国政治制度/中国的不足]]
 > Tag: #3-信仰/3B-信与疑 #1-家族/1A-内外/1-内在建设/1e-立志
 > 评论区: [[评论区_无爱信仰]]
 > 泛讨论:
