--- a/【文章目录】/【5 - 社会科学】/530 - 礼俗/530 - 礼俗总论/师徒衣钵.md
+++ b/【文章目录】/【5 - 社会科学】/530 - 礼俗/530 - 礼俗总论/师徒衣钵.md
@@ -2,25 +2,21 @@
 [“师傅领进门，修行靠个人”这个“领进门”到底有多重要？](https://www.zhihu.com/question/604796840/answer/3079746092)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-06-18]
+> Last update: [编辑于 2023-07-20]
 > Link: [[尊师]] [[求学]]
 > Tag: #1-家族/1B-处世/2-外务/2c-求学求知 #1-家族/1G-统绪/1-规矩 
 > 评论区:
 > 泛讨论:
 
-“师父领进门，修行靠个人”的意思几乎跟专业知识学习没有啥关系。
+“师父领进门，修行靠个人”的意思几乎跟专业知识学习没有啥关系。在专业知识学习方面，**几乎一切都要靠师傅**，而不是“师傅启蒙一下，其它靠弟子自悟”。
 
-在专业知识学习方面，**几乎一切都要靠师傅**，而不是“师傅启蒙一下，其它靠弟子自悟”。
+“领进门”，是指“拜师学艺直到代师坐堂、执业”这一段的经历，到这一段经历的末尾，别人会以“某师之徒”的身份来对待你。
 
-“领进门”，是指“拜师学艺直到代师坐堂、执业”这一段的经历，到这一段经历的末尾，别人会以“某师之徒”的身份见到你。
+在这之前，你虽然有师徒名义，但是这个徒弟身份是不为客户所知的——或者换一个说法，师傅不会允许你以师门名义进行任何专业实践。
 
-在这之前，你虽然有师徒名义，但是这个徒弟身份是不为外人所知的——或者换一个说法，师傅不会允许你以师门名义进行任何专业实践。
+从外人眼里看来，你也可能仅仅是师门里的一个仆人，一个临时工。师门是看病的，你却只是在医馆里扫地、称药、打包的。师门是唱戏的，你却是师门里看箱子、搭场子、收门票的。你不是诊、疗，唱、作团队的一部分，这时你在客户、同行看来，你其实还不算“进门”。
 
-从外人眼里看来，你也可能仅仅是师门里的一个仆人，一个临时工。师门是看病的，你却只是在医馆里扫地、称药、打包的。师门是唱戏的，你却是师门里看箱子、搭场子、收门票的。你不是诊、疗，唱、作团队的一部分。
-
-在客户、同行看来，你其实还不算“进门”。
-
-等你上台有台词了，开始写方子或者负责炮制、煎熬了，你才算进门了，成了师门声誉的一部分。
+直到等你上台有台词了，开始写方子或者负责炮制、煎熬了，你才算进门了，成了师门声誉的一部分。
 
 注意，这时候你还没出师，没有字号，没有自己的班底。但是这时候别人介绍你、认识你，你头上你已经有了“某师某徒”的名号——也就是成了所谓“有身份的人”了。
 
