--- a/【本周更新】/懒惰基准.md
+++ b/【本周更新】/懒惰基准.md
@@ -3,8 +3,8 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-20]
-> Link:
-> Tag: [处世, 最近更新]
+> Link: [[拖拉机]]
+> Tag: #1-家族/1B-处世/1-内务 
 > 评论区:
 > 泛讨论:
 
