--- a/【本周更新】/纹身.md
+++ b/【本周更新】/纹身.md
@@ -1,10 +1,10 @@
-# 短标题
+# 纹身
 [身上有前夫名字的纹身，万一洗不掉怎么办?](https://www.zhihu.com/question/593546154/answer/3128666651)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-21]
-> Link:
-> Tag: [最近更新]
+> Link: [[工程师路线 1]] [[工程师路线 2]] [[工程师路线 3]]
+> Tag: #1-家族/1E-两性/1-亲密关系/1b-交往案例/恋爱 #合集/合集2-一些推荐 
 > 评论区:
 > 泛讨论:
 
