--- a/【本周更新】/脆弱的诡计.md
+++ b/【本周更新】/脆弱的诡计.md
@@ -3,8 +3,8 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-19]
-> Link:
-> Tag: [处世, 最近更新]
+> Link: [[肇因与动因]]
+> Tag: #1-家族/1E-两性/1-亲密关系/1a-交往准则/银子弹 #1-家族/1F-亲子/2-身为子女 #1-家族/1D-心理/2-抑郁
 > 评论区:
 > 泛讨论:
 
