--- a/【本周更新】/袭击敖德萨 2.md
+++ b/【本周更新】/袭击敖德萨 2.md
@@ -1,10 +1,10 @@
-# 短标题
+# 袭击敖德萨
 [如何评价俄罗斯空袭敖德萨波及到中国驻敖德萨总领事馆？](https://www.zhihu.com/question/613219639/answer/3128807950)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-21]
 > Link:
-> Tag: [最近更新]
+> Tag: #合集/合集4-俄乌战争 
 > 评论区:
 > 泛讨论:
 
