--- a/沙海拾金/文章相关讨论/评论区_中国的不足.md
+++ b/沙海拾金/文章相关讨论/评论区_中国的不足.md
@@ -1,4 +1,4 @@
-> Backlink: [[中国的不足]]
+> Backlink: [[【文章目录】/【5 - 社会科学】/570 - 政治/573 - 中国政治制度/中国的不足]]
 
 Q: 有一次吃午饭，突然想用左手使筷子，发现其实也还是不错的，虽然用起来没有右手顺手，但满足我的进食需求是完全可以的。
 
