--- a/沙海拾金/泛讨论/泛讨论_美学工程.md
+++ b/沙海拾金/泛讨论/泛讨论_美学工程.md
@@ -1,12 +1,6 @@
-# 短标题
-[至少美感上有一定追求](https://www.zhihu.com/pin/1664622175343755264)
+> Backlink: 
 
-> Author: #0-Anonymity
-> Last update: [编辑于 2023-07-18]
-> Link:
-> Tag: [想法集]
-> 评论区:
-> 泛讨论:
+[至少美感上有一定追求](https://www.zhihu.com/pin/1664622175343755264)
 
 至少美感上有一定追求。
 
