--- a/【文章目录】/【1 - 哲学类】/150 - 逻辑学/153 - 科学方法论/3. 案例分析/工程师路线 3.md
+++ b/【文章目录】/【1 - 哲学类】/150 - 逻辑学/153 - 科学方法论/3. 案例分析/工程师路线 3.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-07-12]
 > Link: [[工程师路线 1]] [[工程师路线 2]]
-> Tag: #合集/合集2-一些推荐
+> Tag: #1-家族/1E-两性/1-亲密关系/1b-交往案例/恋爱 #合集/合集2-一些推荐
 > 评论区:
 > 泛讨论:
 
