--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/198-1. 态度与伦理/内卷.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/198-1. 态度与伦理/内卷.md
@@ -2,7 +2,7 @@
 [内卷到底是什么？](https://www.zhihu.com/question/423255035/answer/1852510707)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-03-02]
+> Last update: [编辑于 2023-07-18]
 > Link: [[敌人]] [[爹味]] [[拼爹]] [[躺平]] [[气泡膜]]
 > Tag: #4-世界史/4A-社科/自然法 #2-事业/2A-功夫/1-核心能力/学会计 #2-事业/2C-职业/1-态度与伦理 #2-事业/2A-功夫/1-核心能力/做计划 #1-家族/1G-统绪/2-传家
 > 评论区: [[评论区_内卷]]
@@ -46,35 +46,25 @@ ta们认为这种潜在收益是如此的显然，犹如低垂的果实，伸手
 
 如果没有什么别的补充，我们就从这个起点出发来开讲了。
 
+--------------------
+
 我们先来看一个最基本的问题——
 
 是否真的存在没有收益的竞争？
 
 当局中的玩家只有某甲和某乙的时候，是否某甲和某乙只要不停止竞争，就是愚蠢的？
 
-让我们把“资源匮乏，两个只能活一个”这个条件爱你都一并拿掉。
-
-假设资源并不匮乏，只要停止竞争，甲乙至少目前都可以活。
-
-在这种情况下，甲乙继续竞争毫无疑问会导致彼此成本升高，于是ta们继续竞争的必要性是真的不存在了吗？
+让我们把“资源匮乏，两个只能活一个”这个条件都一并拿掉，就假设资源并不匮乏，只要停止竞争，甲乙至少目前都可以活。在这种情况下，甲乙继续竞争毫无疑问会导致彼此成本升高，于是ta们继续竞争的必要性是真的不存在了吗？
 
 事实上，因为双方都不能保证共识不会被对方撕毁，于是因为这种停战共识而真的停止备战、停止竞争的努力是一种显而易见的愚蠢。
 
-那只是**停战协议**，可不是**停止备战协议**。
-
-从达成停战协议的那一刻开始，双方就天然的进入了抢夺抢先撕毁协议的优势地位的新竞争。
-
-谁瞒得严，谁跑得快，谁就会是最后的赢家。任何天真的乡愿，都是在实际选择自取灭亡。
+那只是**停战协议**，可不是**停止备战协议**。从达成停战协议的那一刻开始，双方就天然的进入了抢夺抢先撕毁协议的优势地位的新竞争。谁瞒得严，谁跑得快，谁就会是最后的赢家。任何天真的乡愿，都是在实际选择自取灭亡。
 
 那么，是否可以靠“超然的第三方”来负责确保反内卷协议的永久有效呢？那不就可以消除这种军备竞赛了吗？
 
-那么，这笔反内卷的成本谁来负担呢？
+问题是，这笔“反内卷服务”的成本谁来负担呢？
 
-老王头天天在家辛勤劳作，带着几个娃汗流浃背土里刨食。一听说村里张三要卷李四，不等李四动手，老头子就带着一帮小子去把张三一顿打。
-
-张三家三兄弟头破血流，跪地求饶，
-
-老王家的小四断了腿，这医药费老王家自己扛了。断了腿的小四一想起自己维护了火影村的无内卷生活，胸膛就挺得更高了。
+老王头天天在家辛勤劳作，带着几个娃汗流浃背土里刨食。一听说村里张三要卷李四，不等李四动手，老头子就带着一帮小子去把张三一顿打。张三家三兄弟头破血流，跪地求饶，老王家的小四断了腿，这医药费老王家自己扛了。断了腿的小四一想起自己维护了火影村的无内卷生活，胸膛就挺得更高了。
 
 靠这样吗？
 
@@ -103,6 +93,8 @@ ta们认为这种潜在收益是如此的显然，犹如低垂的果实，伸手
 火影村虽然灭亡了，但是人生自古谁无死？就为了赖活着而日夜内卷，真的值得吗？
 
 可惜，第二天ta酒醒了，完全不记得自己说了些啥了。
+
+--------------------
 
 所以你们看懂为什么老电影院里的人们不得不全部站着看电影了吗？
 
@@ -141,6 +133,8 @@ ta们认为这种潜在收益是如此的显然，犹如低垂的果实，伸手
 而如果ta们竟然“成功”了，过上了相安无事的闲暇生活，ta们也只是走上了下一次集体灭绝的危机——威胁他们的不仅仅是新的未知竞争者，还会有ta们若不停止自我发展本来可以战胜的自然危机。
 
 以为只要足够宽裕了就不必继续竞争下去，甚至认为这种继续竞争只是“毫无意义的福利浪费”，只不过是得失计算失误的结果。
+
+--------------------
 
 另一个问题是，生存竞争的烈度是否可能依靠设定一定的规则来削弱？
 
@@ -234,6 +228,8 @@ ta们认为这种潜在收益是如此的显然，犹如低垂的果实，伸手
 
 非要勉强它们——或者它们之中谁真的蠢到冲昏头脑胆敢当这个“为民请命“的堂吉诃德，那么它只不过是自取灭亡，然后换一个没这种不自量力的继任者坐它的位置罢了。
 
+--------------------
+
 那么，如果竞争明显造成了所有活着的人的痛苦，而并没有明显的总体净收益呢？
 
 比如，张三和李四、王五等等等等一大群人，一起抢一个杯子。他们消耗了大量的体力、脑力去互相对抗、博弈，但是无论ta们怎么争，一个杯子也还是一个杯子，并没有因此变成两个杯子，不是吗？
@@ -242,7 +238,7 @@ ta们认为这种潜在收益是如此的显然，犹如低垂的果实，伸手
 
 问题是，竞争造成的净结果实际上并不是张三李四王五等等人每人付出了若干成本后张三得到了一个杯子。
 
-如果仅仅是这样，那么何必仅仅局限在这个小小的被子上岂不是眼光太小了？不如索性大胆一点——既然这个世界上物质与能量都是不灭且守恒的，那么一切有额外成本的所有权转移岂不是全是净亏损吗？
+如果仅仅是这样，那么何必仅仅局限在这个小小的杯子上岂不是眼光太小了？不如索性大胆一点——既然这个世界上物质与能量都是不灭且守恒的，那么一切有额外成本的所有权转移岂不是全是净亏损吗？
 
 世界上根本就不应该有任何争夺、对抗、杀戮存在，不是吗？就算已经发生了一些，也不应该再发生更多，不是吗？
 
@@ -301,6 +297,8 @@ ta们内部竞争所损害掉的那些显然的代价，到底从哪里得到了
 **所以，不要高估这种“改进”的效力。**
 
 等你把一切幻想都抛弃舍净了，再来看下面的话。
+
+--------------------
 
 竞争是不可能终止的，而且因为信息技术、交通技术的发展，在将来和你竞争的人会越来越多，并且由于生存竞争的烈度只与参与的人数有关，生存竞争的烈度只会越来越大。
 
@@ -376,7 +374,7 @@ ta们内部竞争所损害掉的那些显然的代价，到底从哪里得到了
 
 红海无边，血不嫌多。
 
----
+--------------------
 
 现在，最关键的问题来了：
 
@@ -394,7 +392,7 @@ which is TO WIN.
 
 问题是，**如果赢的不是我怎么办？**
 
----
+--------------------
 
 你看，这就是关键所在了——你需要一个planB，来保证即使planA没能为你赢得竞争胜利，你仍然会赢得竞争胜利。
 
@@ -420,7 +418,7 @@ which is TO WIN.
 
 你要找到那个同样指向胜利的planB，这就是这个问题的圣杯。
 
----
+--------------------
 
 那么，下面我们看一个例子。
 
@@ -456,7 +454,7 @@ Well，“均未成功”。
 
 There is a saying you know，
 
-![](https://picx.zhimg.com/50/v2-a118fe5a4a0b1805962404bfabe58a02_720w.jpg?source=1940ef5c)
+![Image](https://pica.zhimg.com/50/v2-a118fe5a4a0b1805962404bfabe58a02_720w.jpg?source=1940ef5c)
 
 《百万英镑》、《竞选州长》、《王子与乞儿》、《我如何编写农业报》……《哈克贝利·费恩历险记》、《汤姆·索亚历险记》……《火车上的吃人事件》、《败坏了哈德莱堡的人》……《镀金时代》。
 
@@ -532,9 +530,9 @@ n越大，焦虑和恐惧越甚、输面越大、后果也越惨烈。
 
 这才是竞争的秘密。
 
-### **前者迟早必胜，早不如迟。**
+### **前者迟早必胜，早不如迟。** ###
 
-### **后者迟早必败，迟不如早。**
+### **后者迟早必败，迟不如早。** ###
 
 Fight your good fight with all you can spare, and have all the fun.
 
