--- a/【文章目录】/【10 - 专题类】/俄乌战争/来点真东西.md
+++ b/【文章目录】/【10 - 专题类】/俄乌战争/来点真东西.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: *04/11/2022*
-> Link: [[几点注意]] [[一个坑]] [[膝盖的目的]] [[购汇凭证]] [[镜中妖]]
+> Link: [[非预言]] [[一个坑]] [[膝盖的目的]] [[购汇凭证]] [[镜中妖]]
 > Tag: #4-世界史/4B-政治
 > 评论区:
 > 泛讨论:
