--- a/【文章目录】/【4 - 应用科学】/420 - 家政/427 - 饮食 & 烹饪/厨艺高低.md
+++ b/【文章目录】/【4 - 应用科学】/420 - 家政/427 - 饮食 & 烹饪/厨艺高低.md
@@ -2,7 +2,7 @@
 [哪些细节可以看出一个人厨艺水平的高低？](https://www.zhihu.com/question/455661457/answer/1847029344)
 
 > Author: #0-Anonymity
-> Last update: [发布于 2021-04-21]
+> Last update: [编辑于 2023-07-20]
 > Link: [[厨房清洁策略]] [[学习的快乐]]
 > Tag: #2-事业/2A-功夫/2-拓展能力/厨艺
 > 评论区:
