--- a/【文章目录】/【4 - 应用科学】/440 - 工程/447 - 交通工具工程/飞机/C919 2.md
+++ b/【文章目录】/【4 - 应用科学】/440 - 工程/447 - 交通工具工程/飞机/C919 2.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-05-16]
-> Link: [[全球化]] [[中国的不足]] [[关心政治]] [[中国人的全球化]] [[气候异常时代]] [[大国博弈]] [[跨国风险]] [[中国刀]]
+> Link: [[全球化]] [[【文章目录】/【5 - 社会科学】/570 - 政治/573 - 中国政治制度/中国的不足]] [[关心政治]] [[中国人的全球化]] [[气候异常时代]] [[大国博弈]] [[跨国风险]] [[中国刀]]
 > Tag: #4-世界史/4A-社科
 > 评论区:
 > 泛讨论:
