--- a/【文章目录】/【5 - 社会科学】/520 - 教育/社会教育/校服.md
+++ b/【文章目录】/【5 - 社会科学】/520 - 教育/社会教育/校服.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-08-25]
-> Link: [[军训]] [[中国的不足]]
+> Link: [[军训]] [[【文章目录】/【5 - 社会科学】/570 - 政治/573 - 中国政治制度/中国的不足]]
 > Tag: #4-世界史/4A-社科/教育
 > 评论区:
 > 泛讨论:
