--- a/【文章目录】/【5 - 社会科学】/550 - 经济/555 - 产业 & 工业/中国基建.md
+++ b/【文章目录】/【5 - 社会科学】/550 - 经济/555 - 产业 & 工业/中国基建.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2020-08-23]
-> Link: [[基础建设]] [[中国的规模]] [[缺乏创新]] [[中国的不足]] [[中国小确幸]] [[中国式反同化]] [[中国人的全球化]]
+> Link: [[基础建设]] [[中国的规模]] [[缺乏创新]] [[【文章目录】/【5 - 社会科学】/570 - 政治/573 - 中国政治制度/中国的不足]] [[中国小确幸]] [[中国式反同化]] [[中国人的全球化]]
 > Tag: #4-世界史/4A-社科
 > 评论区:
 > 泛讨论:
