--- a/【文章目录】/【5 - 社会科学】/570 - 政治/578 - 国际关系/春晓.md
+++ b/【文章目录】/【5 - 社会科学】/570 - 政治/578 - 国际关系/春晓.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-06-05]
-> Link: [[大国影响]] [[大国博弈]] [[表态反对]] [[舆论战]] [[我的资源]] [[帝国病]] [[王天下]] [[中国的不足]]
+> Link: [[大国影响]] [[大国博弈]] [[表态反对]] [[舆论战]] [[我的资源]] [[帝国病]] [[王天下]] [[【文章目录】/【5 - 社会科学】/570 - 政治/573 - 中国政治制度/中国的不足]]
 > Tag: #4-世界史/4B-政治
 > 评论区:
 > 泛讨论:
