--- a/【文章目录】/【5 - 社会科学】/580 - 法律/580 - 法律总论/勿处实祸.md
+++ b/【文章目录】/【5 - 社会科学】/580 - 法律/580 - 法律总论/勿处实祸.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [发布于 2021-08-13]
-> Link: [[评论冰箱]] [[棱角分明]] [[性骚扰]] [[本质]] [[接受但不允许]] [[乱伦]] [[不建天国]] [[服从]] [[中国的不足]]
+> Link: [[评论冰箱]] [[棱角分明]] [[性骚扰]] [[本质]] [[接受但不允许]] [[乱伦]] [[不建天国]] [[服从]] [[【文章目录】/【5 - 社会科学】/570 - 政治/573 - 中国政治制度/中国的不足]]
 > Tag: #4-世界史/4A-社科
 > 评论区:
 > 泛讨论:
