--- a/【本周更新】/还手.md
+++ b/【本周更新】/还手.md
@@ -3,8 +3,8 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-19]
-> Link:
-> Tag: [处世, 最近更新]
+> Link: [[服从]]
+> Tag: #1-家族/1B-处世/2-外务/2e-冲突处理 #1-家族/1C-安全/1-自我保护/1c-自救策略 #1-家族/1F-亲子/2-身为子女 
 > 评论区:
 > 泛讨论:
 
