--- a/【本周更新】/卑鄙逻辑.md
+++ b/【本周更新】/卑鄙逻辑.md
@@ -1,10 +1,10 @@
-# 短标题
+# 卑鄙逻辑
 [为什么曹德旺给寺庙捐款也不提升员工待遇？](https://www.zhihu.com/question/592467603/answer/3177147723)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-08-22]
 > Link:
-> Tag: [处世, 最近更新]
+> Tag:
 > 评论区:
 > 泛讨论:
 
