--- a/【本周更新】/科学依据.md
+++ b/【本周更新】/科学依据.md
@@ -1,10 +1,10 @@
-# 短标题
+# 科学依据
 [外交部回应「中方宣布全面暂停进口日本水产品有何科学依据」，哪些信息值得关注？](https://www.zhihu.com/question/618939808/answer/3180724191)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-08-24]
 > Link:
-> Tag: [最近更新]
+> Tag:
 > 评论区:
 > 泛讨论:
 
