--- a/【本周更新】/间谍之难.md
+++ b/【本周更新】/间谍之难.md
@@ -1,10 +1,10 @@
-# 短标题
+# 间谍之难
 [国家安全机关又公布一起美国中央情报局间谍案，嫌犯系某国家部委干部，哪些信息值得关注？](https://www.zhihu.com/question/618344815/answer/3176489567)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-08-22]
 > Link:
-> Tag: [时政, 最近更新]
+> Tag:
 > 评论区:
 > 泛讨论:
 
