--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/冲突处理/释放攻击性.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/冲突处理/释放攻击性.md
@@ -2,23 +2,15 @@
 [为什么人际交往中释放攻击性，反而会在一些情况下很有人格魅力？](https://www.zhihu.com/question/533622671/answer/2984432378)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-04-15]
+> Last update:  [编辑于 2023-08-23]
 > Link:
 > Tag: #1-家族/1A-内外/1-内在建设/1b-修养 #1-家族/1B-处世/2-外务/2e-冲突处理
 > 评论区:
 > 泛讨论:
 
-因为青少年智力发育不成熟，为这种“欣赏”留下了土壤。
+因为青少年智力发育不成熟，为这种“欣赏”留下了土壤。“释放攻击性”没有任何魅力可言，只不过是一种自我控制的失效，属于一种行为失调症状。
 
-“释放攻击性”没有任何魅力可言，只不过是一种自我控制的失效，属于一种行为失调症状。
-
-之前就说过，使用武力跟“释放攻击性”根本就是两种风格，其差别之大，如同外科手术医生之于挥舞菜刀的牛二。
-
-同样是用刀，前者拿刀开膛破肚剜心掏肺面不改色，根本没有什么情绪波动，根本不存在什么喝个烂醉拖个光膀子破口大骂的壮胆前戏。
-
-你要他多拉一厘米的伤口都不干，妨碍他早点弄完下班。
-
-哪有农民一边打农药一边破口大骂“虫虫真坏”的？
+之前就说过，使用武力跟“释放攻击性”根本就是两种风格，其差别之大，如同外科手术医生之于挥舞菜刀的牛二。同样是用刀，前者拿刀开膛破肚剜心掏肺面不改色，根本没有什么情绪波动，根本不存在什么喝个烂醉脱个光膀子破口大骂的壮胆前戏。你要他多拉一厘米的伤口都不干，妨碍他早点弄完下班。哪有农民一边打农药一边破口大骂“虫虫真坏”的？
 
 那些成熟的人一般都是给你一切的机会苦口婆心避免你进入处理程序，实在避免不了，那就只好心怀遗憾批准进入下一处理阶段。到时候你哭爹喊娘撕心裂肺，ta也只会眼含不忍一声长叹，能给你最好的答复也只好是——“别怕，忍一忍，唉，很快就结束了。不要担心，没你想的那么可怕，下次记得不要这么做就好。”
 
@@ -32,14 +24,9 @@
 
 ### 那不是爱，那是**见猎心喜**。 ###
 
-  
-
-
 一个真正有爱之人，的确有为人义怒的义务和无可抗拒的本能，但却会清醒的意识到，这种义怒并没有给自己带来任何合法权利以外的行动自由，也没有免除自己对任何人——包括自己义怒的对象——温柔、宽容、友善相待的义务，即使穷尽了一切可能不得不让事态进入中止伤害、追索赔偿、发起公诉的阶段，也只能抱着遗憾、不忍和愧悔的心去以最大可逆、最小伤害方案去做。
 
-只有在这份自觉下，你手里的才是武力，而不是暴力。
-
-你才可以自动最大程度的解除甚至对方的防御，以最小的然而做不可抗拒的力量起的胜利。
+只有在这份自觉下，你手里的才是武力，而不是暴力。你才可以自动最大程度的解除甚至对方的防御，以最小的然而做不可抗拒的力量起的胜利。
 
 这胜利不是对方被挫骨扬灰，闻风丧胆，而是**对方流泪愧悔的心**。
 
@@ -47,12 +34,7 @@
 
 那不但不值得庆贺，反而应该向这因为你能力不足而未能挽回的人深怀歉疚。
 
-可惜，是我不够强大，我如果够强，你不会灭亡。
-
-我无法为这一点道歉，因为我无法为身为有限的人类这无法被选择和更改的定数道歉，但这仍然是一种遗憾。
-
-  
-
+可惜，是我不够强大，我如果够强，你不会灭亡。我无法为这一点道歉，因为我无法为身为有限的人类这无法被选择和更改的定数道歉，但这仍然是一种遗憾。
 
 这话是说给你们听的——我是指每一个在评论区或者别的什么地方因为看到有人攻击我而义怒的人——看清楚、记住上面这些话。
 
@@ -60,19 +42,9 @@
 
 因为该学的你没学到，懂不懂？
 
-你是不是觉得这样的人“太不正常”？
+你是不是觉得这样的人“太不正常”？但这个世界上充满了伤害、仇恨、污蔑、报复，也全是拜“正常人”所赐。而且这些“正常人”并不幸福。
 
-但这个世界上充满了伤害、仇恨、污蔑、报复，也全是拜“正常人”所赐。而且这些“正常人”并不幸福。
-
-  
-
-
-只有这样的人，才会真正的拥有无可匹敌的武力，也只有这样的人可以战胜一切敌人。
-
-因为连敌人也会暗暗盼ta得胜。
-
-  
-
+只有这样的人，才会真正的拥有无可匹敌的武力，也只有这样的人可以战胜一切敌人——因为连敌人也会暗暗盼ta得胜。
 
 停止“欣赏释放攻击性”，**尤其不要“欣赏”为你服务的“攻击性”**。
 
