--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/价值观/一国书.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/价值观/一国书.md
@@ -2,7 +2,7 @@
 [为什么知乎上有人会花费这么长的篇幅耐心地回答一个陌生人的问题？](https://www.zhihu.com/question/53753874/answer/2818367044)
 
 > Author: #0-Anonymity
-> Last update: [发布于 2022-12-27]
+> Last update: [编辑于 2023-08-25]
 > Link: [[与世长存]] [[永生]] [[教育的及格线]] [[创作动力]] [[初中生]] [[星星]] [[经史子集]]
 > Tag: #2-事业/2B-投资 #1-家族/1B-处世/2-外务/2d-文责意识 #1-家族/1C-安全/2-救助ta人 #3-信仰/3A-Caritas/2-慈善 #1-家族/1A-内外/1-内在建设/1b-修养
 > 评论区:
@@ -40,7 +40,7 @@
 
 而不是张三贴身服侍李四，李四贴身服务王五。
 
-**李四支付不起张三的贴身服务，因为王五就支付不起李四的人贴身服务。**
+**李四支付不起张三的贴身服务，因为王五就支付不起李四的贴身服务。**
 
 这种个人对个人的“关心“，因为其显而易见的效率低下，势必会自然破产。它能“长期维持”的唯一的原因，就是张三李四自身被视为资源，而非人类——ta们的亏损可以通过ta们的死亡被抹去，等于定期把欠条堆在死人身上一起火化，然后宣布“我从不亏钱”。
 
