--- a/【文章目录】/【1 - 哲学类】/170 - 心理学/173 - 一般心理/情绪/怕什么来什么.md
+++ b/【文章目录】/【1 - 哲学类】/170 - 心理学/173 - 一般心理/情绪/怕什么来什么.md
@@ -2,7 +2,7 @@
 [我是一个女生，觉得性这种东西好恶心，还觉得生孩子很恶心，怎么办？](https://www.zhihu.com/question/35435036/answer/3070455242)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-06-12]
+> Last update: [编辑于 2023-08-22]
 > Link: [[性]] [[自然法]] [[TOUGHNESS]]
 > Tag: #1-家族/1A-内外/1-内在建设/1d-自强 #1-家族/1D-心理/1-情绪 
 > 评论区:
@@ -14,7 +14,7 @@
 
 溅到一身污水就会晕厥，这是残缺和遗憾，不是“个性”和“身份”。
 
-**不要为自己的残缺自豪，也不要用自己独特的残缺定义自己，更不要尝试找到“病友夸夸群”把残缺“正常化。**
+**不要为自己的残缺自豪，也不要用自己独特的残缺定义自己，更不要尝试找到“病友夸夸群”把残缺“正常化”。**
 
 搞反方向，你会发现命运最残酷的一面——你讨厌什么，就要给安排什么，而且还总是把你的生死存亡系于这一线，逼得你要么低头咽下，要么就要坐困愁城、弹尽援绝。
 
