--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论计划/果断.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论计划/果断.md
@@ -2,7 +2,7 @@
 [如何成为一个果断的人？](https://www.zhihu.com/question/49278560/answer/2700435285)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2022-10-04]
+> Last update: [编辑于 2023-09-04]
 > Link:
 > Tag: #1-家族/1A-内外/1-内在建设/1d-自强 #2-事业/2A-功夫/1-核心能力/做计划 #2-事业/2A-功夫/1-核心能力/学语言
 > 评论区:
@@ -64,7 +64,7 @@
 
 精确是来自面向实践的迫切自觉。
 
-你要精确的定义“欺负”的判断要件，才能设置“有人欺负我吗“的监测程序，才能有“A类欺负如何处理，B类欺负如何处理“的预案，才会有相关的物资与智力资源的准备，才有可能及时、有效的处理。
+你要精确的定义“欺负”的判断要件，才能设置“有人欺负我吗“的监测程序，才能有“A类欺负如何处理，B类欺负如何处理”的预案，才会有相关的物资与智力资源的准备，才有可能及时、有效的处理。
 
 你才不会悔恨和因为害怕悔恨而犹豫。
 
