--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/人生观/脆弱的诡计.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/人生观/脆弱的诡计.md
@@ -2,7 +2,7 @@
 [哪一瞬间让你明白了女孩子长大后是没有家的？](https://www.zhihu.com/question/587222028/answer/3124849280)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-07-24]
+> Last update: [编辑于 2023-09-07]
 > Link: [[肇因与动因]]
 > Tag: #1-家族/1E-两性/1-亲密关系/1a-交往准则/银子弹 #1-家族/1F-亲子/2-身为子女 #1-家族/1D-心理/2-抑郁
 > 评论区:
@@ -16,7 +16,7 @@
 
 这是**专业寄生虫**的心理发育方向。
 
-**记住了——**
+**作为一个路人，你记住了——**
 
 **第一，你不缺这种“好棒棒”。**
 
