--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/职业分析/太空葬.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/职业分析/太空葬.md
@@ -2,7 +2,7 @@
 [如果中国宇航员在空间站牺牲了怎么办？](https://www.zhihu.com/question/617927402/answer/3171502393)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-08-18]
+> Last update: [编辑于 2023-09-09]
 > Link:
 > Tag: #2-事业/2C-职业/3-职业分析 
 > 评论区:
@@ -14,4 +14,4 @@
 
 可想而知，航天员签没签这些捐赠条款是选拔条件的重要考量。
 
-所以，类似“太空葬礼”，这一百年应该是条件绝对不允许设计的罕见现象。
+所以，类似“太空葬礼”，这一百年应该是条件绝对不允许时的罕见现象。
