--- a/【文章目录】/【3 - 自然科学】/390 - 人类学/脑核心.md
+++ b/【文章目录】/【3 - 自然科学】/390 - 人类学/脑核心.md
@@ -2,7 +2,7 @@
 [我的大脑就是我吗?就是我的的精神、思想和灵魂吗?](https://www.zhihu.com/question/26931003/answer/2842795240)
 
 > Author: #0-Anonymity
-> Last update: [发布于 2023-01-13]
+> Last update: [编辑于 2023-09-08]
 > Link: [[无知的大脑]]
 > Tag: #4-世界史/4E-科学技术/1-科学 #2-事业/2A-功夫/2-拓展能力/哲学
 > 评论区:
@@ -10,7 +10,7 @@
 
 有一个很简单的思想实验就能对这个问题下一个定论。
 
-设想你现在失去了右手，或者——for argu sake——失去了生殖器。
+设想你现在失去了右手，或者——for argument’s sake——失去了生殖器。
 
 如果你就是你的“精神、思想、灵魂”，那么失去这些的你在思想上应该没有强烈的改变。
 
