--- a/【本周更新】/举石者.md
+++ b/【本周更新】/举石者.md
@@ -2,7 +2,7 @@
 [近日多位大 V 呼吁「公共场所宽容幼童」，目前韩国许多商铺设立禁儿童区，公共场合对幼童包容度是否过低？](https://www.zhihu.com/question/610461559/answer/3193761028)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-09-02]
+> Last update: [编辑于 2023-09-06]
 > Link:
 > Tag:
 > 评论区:
@@ -26,11 +26,7 @@ ta如果情感上感觉“这是大坏事“，自然是要想法子避免，但
 
 如果要打个形象的比喻——就像一个原始部落，在技术发展还非常初级的阶段，就遇到了极端的气候挑战——例如遭遇了大洪水，ta们势必会把手头仅有的那点技术生产出来的材料挪用来去对付这种挑战。
 
-但如果站在第三方视角，就会发现ta们用原始的技术花费巨大代价建设的那个堤坝，效率极低、代价极高。
-
-如果ta们没有在早期就遭遇这么大的刺激，而是哪怕先从盖房子里学到稍微先进一点的技术，再来遭遇这样的洪水，ta们修起来的堤坝都会先进、廉价得多。
-
-综合来看，在**可以避免**的前提下，过早的接触这么大难度、这么尖锐的灾难挑战，对于当事人当然是一个损失。
+但如果站在第三方视角，就会发现ta们用原始的技术花费巨大代价建设的那个堤坝，效率极低、代价极高。如果ta们没有在早期就遭遇这么大的刺激，而是哪怕先从盖房子里学到稍微先进一点的技术，再来遭遇这样的洪水，ta们修起来的堤坝都会先进、廉价得多。综合来看，在**可以避免**的前提下，过早的接触这么大难度、这么尖锐的灾难挑战，对于当事人当然是一个损失。
 
 第二方面，父母自己的行为会对子女形成错误的示范。
 
@@ -46,7 +42,7 @@ ta如果情感上感觉“这是大坏事“，自然是要想法子避免，但
 
 所谓的“抗争”，在这个路线下，仅仅发生在已经经过多轮再选择，以至于到达了一个自己有足够优势、有能力单凭自身影响力移风易俗的环境之中。在这里才从战略上由回避转移转为进攻性统治。
 
-简单来说，就是重视侦查和隐蔽，不打无把握之仗。绝大多数时间都处在可能的敌对者的视线之外，一旦主动现身，那已经是有足够的——即哪怕有一些意外导致实力要打对折都仍然有五成以上把握的——胜算。
+简单来说，就是重视侦查和隐蔽，不打无把握之仗。绝大多数时间都处在可能的敌对者的视线之外，一旦主动现身，那已经是有足够的胜算——即哪怕有一些意外导致实力要打对折都仍然有五成以上把握取胜。
 
 风格B，轻入冒进，然而靠强烈的斗争性在随后的劣势中寻求自保。
 
