--- a/沙海拾金/泛讨论/泛讨论_人道合一.md
+++ b/沙海拾金/泛讨论/泛讨论_人道合一.md
@@ -1,12 +1,6 @@
-# 短标题
-[基本上，这是需要不间断的读上十年才会人…](https://www.zhihu.com/pin/1677160787058282496)
+> Backlink: 
 
-> Author: #0-Anonymity
-> Last update: [编辑于 2023-08-22]
-> Link:
-> Tag: [想法集]
-> 评论区:
-> 泛讨论:
+[基本上，这是需要不间断的读上十年才会人…](https://www.zhihu.com/pin/1677160787058282496)
 
 基本上，这是需要不间断的读上十年才会人道合一的东西。
 
