--- a/沙海拾金/泛讨论/泛讨论_孩子的理解能力.md
+++ b/沙海拾金/泛讨论/泛讨论_孩子的理解能力.md
@@ -1,12 +1,6 @@
-# 短标题
-[小孩子无法理解父母说的东西，如果你给ta…](https://www.zhihu.com/pin/1681776385193029632)
+> Backlink: 
 
-> Author: #0-Anonymity
-> Last update: [编辑于 2023-09-03]
-> Link:
-> Tag: [想法集]
-> 评论区:
-> 泛讨论:
+[小孩子无法理解父母说的东西，如果你给ta…](https://www.zhihu.com/pin/1681776385193029632)
 
 小孩子无法理解父母说的东西，如果你给ta拒绝的权力，ta几乎不可能按照你想的那样恰当的运用。
 
