--- a/沙海拾金/泛讨论/泛讨论_暴力迷信.md
+++ b/沙海拾金/泛讨论/泛讨论_暴力迷信.md
@@ -1,12 +1,6 @@
-# 短标题
-[有些人很奇怪的，他们自称要“改变现状”…](https://www.zhihu.com/pin/1678273199157243904)
+> Backlink: 
 
-> Author: #0-Anonymity
-> Last update: [编辑于 2023-08-25]
-> Link:
-> Tag: [想法集]
-> 评论区:
-> 泛讨论:
+[有些人很奇怪的，他们自称要“改变现状”…](https://www.zhihu.com/pin/1678273199157243904)
 
 有些人很奇怪的，他们自称要“改变现状”，但是却既不关心现状确切的真实状态、也不关心现状形成的背后的原因。
 
