--- a/沙海拾金/泛讨论/泛讨论_电台维护.md
+++ b/沙海拾金/泛讨论/泛讨论_电台维护.md
@@ -1,12 +1,6 @@
-# 短标题
-[如果想借我的素材找工作或者找恋爱对象，…](https://www.zhihu.com/pin/1683880502644338689)
+> Backlink: 
 
-> Author: #0-Anonymity
-> Last update: [编辑于 2023-09-09]
-> Link:
-> Tag: [想法集]
-> 评论区:
-> 泛讨论:
+[如果想借我的素材找工作或者找恋爱对象，…](https://www.zhihu.com/pin/1683880502644338689)
 
 如果想借我的素材找工作或者找恋爱对象，最佳实践建议如下：
 
