--- a/【本周更新】/为了民主自由.md
+++ b/【本周更新】/为了民主自由.md
@@ -1,4 +1,4 @@
-# 短标题
+# 为了民主自由
 [亡国危机之下的乌克兰人，能否意识到曾经为了民主自由打破的所有桎梏与铁镣原来是保护自己的铠甲吗？](https://www.zhihu.com/question/619249068/answer/3202698847)
 
 > Author: #0-Anonymity
