--- a/【本周更新】/人生的价值.md
+++ b/【本周更新】/人生的价值.md
@@ -1,4 +1,4 @@
-# 短标题
+# 人生的价值
 [人生的价值不体现在你工作的 8h，而体现在你下班后的 8h，你同意这种说法吗？](https://www.zhihu.com/question/620467586/answer/3201276411)
 
 > Author: #0-Anonymity
