--- a/【本周更新】/新闻解读.md
+++ b/【本周更新】/新闻解读.md
@@ -1,4 +1,4 @@
-# 短标题
+# 新闻解读
 [如何看待古巴外交部披露俄罗斯涉嫌非法贩运人口参与俄乌冲突？](https://www.zhihu.com/question/620875247/answer/3202806991)
 
 > Author: #0-Anonymity
