--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -1,8 +1,39 @@
 # 句子摘录
 
 > Author: #0-Anonymity 
-> Last update: [编辑于 2023-08-02]
+> Last update: [编辑于 2023-09-14]
 
+有时明智和软弱，是很难分辨的。
+
+所以“奋不顾身”才值得额外的尊敬。
+
+哪怕是敌人，当对方骑着一匹瘦马向着我们的装甲集群冲锋，无论ta骑马姿势好不好看、喊的口号是不是不堪入耳，我也要放下望远镜，脱帽致敬。
+
+——[《瘦麒麟》](https://www.zhihu.com/question/618932578/answer/3184785898)
+
+---
+
+你本来可以比你现在伟大得多，但你为了喂养傲慢的虚荣，浪费掉了。
+
+你对你自己的庸常，负有不可推卸的责任。
+
+——[《举石者》](https://www.zhihu.com/question/610461559/answer/3193761028)
+
+---
+  
+遇事不要问什么正义不正义、公平不公平，问你自己的效率，问利润。
+
+有效率、有利润，你总有办法找到实现诉求的手段，世界上的一切都阻止不了你。
+
+——[《效率之王》](https://www.zhihu.com/question/620457299/answer/3198812546)
+
+---
+
+信仰不是说服来的，信仰是征服来的。
+
+——[《妖道》](https://www.zhihu.com/question/609747330/answer/3200038153)
+
+---
 
 不要畏惧被动的孤独，但是不要寻求主动的孤独。
 ——[《雁归处》](https://www.zhihu.com/question/610389488/answer/3156585240)
@@ -2082,10 +2113,3 @@ Just follow the money, the truth is always in the neighborhood.
 
 ---
 
-人的“心声”是非常沉重的东西，本来就不应该有很多人来听。能无限承受人的心声的只有上帝。
-
-认为“人都应该有几个可以倾诉心声的朋友”本身是错的。
-
-——待添加
-
----
