--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/价值观/奢侈品.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/价值观/奢侈品.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-23]
-> Link: [[真奢侈品]] [[珠宝的价值]]
+> Link: [[真奢侈品]] [[钻石]]
 > Tag: #4-世界史/4A-社科 #1-家族/1A-内外/1-内在建设/1c-品味
 > 评论区:
 > 泛讨论:
