--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/价值观/无价之宝.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/价值观/无价之宝.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: *23/07/2021*
-> Link: [[身价]] [[奢侈品]] [[真奢侈品]] [[珠宝的价值]] [[时尚品味]]
+> Link: [[身价]] [[奢侈品]] [[真奢侈品]] [[钻石]] [[时尚品味]]
 > Tag: #合集/合集1-概念与定义 #2-事业/2B-投资
 > 评论区:
 > 泛讨论:
