--- a/沙海拾金/泛讨论/泛讨论_可悲思维.md
+++ b/沙海拾金/泛讨论/泛讨论_可悲思维.md
@@ -1,12 +1,6 @@
-# 短标题
-[这个世界上有这么一种可悲的思维方式](https://www.zhihu.com/pin/1684710270658830336)
+> Backlink: 
 
-> Author: #0-Anonymity
-> Last update: [编辑于 2023-09-11]
-> Link:
-> Tag: [想法集]
-> 评论区:
-> 泛讨论:
+[这个世界上有这么一种可悲的思维方式](https://www.zhihu.com/pin/1684710270658830336)
 
 这个世界上有这么一种可悲的思维方式。
 
