--- a/【文章目录】/【5 - 社会科学】/580 - 法律/582 - 中国法规/本该免费.md
+++ b/【文章目录】/【5 - 社会科学】/580 - 法律/582 - 中国法规/本该免费.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-09-12]
 > Link:
-> Tag: #4-世界史/4A-社科/教育 
+> Tag: #4-世界史/4A-社科/教育 #合集/合集1-概念与定义 
 > 评论区:
 > 泛讨论:
 
