--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/世界观/自然法.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/世界观/自然法.md
@@ -2,14 +2,14 @@
 [什么是「自然法」？](https://www.zhihu.com/question/304501224/answer/1780036431)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-05-15]
+> Last update: [编辑于 2023-10-01]
 > Link: [[社会化]] [[世界史]]
-> Category: #【答集】/09-神学答集
+> Category: #【答集】/04-社科答集 
 > Tag: #3-信仰/3D-神学 #4-世界史/4A-社科/自然法 #4-世界史/4D-历史 #5-专题合集/合集5-人与智能
 > 评论区: [[评论区_自然法]]
 > 泛讨论:
 
-**自然法是什么？**
+## **自然法是什么？** ##
 
 要理解什么是自然法，有一个很简单的思考工具。
 
@@ -33,9 +33,9 @@
 
 **你是否相信直到最终这个交集也不会为空？**
 
-这个问题有另一个变种——假设现场有哪位新来宾导致该交集一下子空掉了，你是选择认为是这交集确实合法的空掉了，还是选择认定这位“新来宾”应该只是一架型号不明、原理不明的无人机？
-
 **这个交集里装着的，就是自然法。**
+
+这个问题有另一个变种——假设现场有哪位新来宾导致该交集一下子空掉了，你是选择认为是这交集确实合法的空掉了，还是选择认定这位“新来宾”应该只是一架型号不明、原理不明的无人机？
 
 你的答案如果是“不为空” + “无人机”，那么你也就是一个**狭义的自然法主义者**——或至少，一个有自然法主义倾向的人。
 
@@ -51,7 +51,7 @@
 
 而这个定义里必然包括了自然规律——也就是牛顿定律、热力学定律、万有引力定律、动量守恒这些“客观”规律。
 
-很显然，这是一个不容人不承认，不承认（包括对其朴素版本——譬如石头能打破头，高温能导致烧伤——的不承认只能说明该对象尚无足以称为智慧生物的资格。
+很显然，这是一个不容人不承认，不承认（包括对其朴素版本——譬如石头能打破头，高温能导致烧伤——的不承认）只能说明该对象尚无足以称为智慧生物的资格。
 
 于是会必然导致其位格的降级——被从“外星人”，降格为某种“东西”。
 
@@ -59,9 +59,9 @@
 
 所以，为了使得这个话题变得更有意义，这里自然法取取狭义。
 
----
+--------------------
 
-**为什么自然法非常重要？**
+## 为什么自然法非常重要？ ##
 
 自然法有着一般立法梦寐以求而又可望不可及的优势。
 
@@ -101,4 +101,5 @@
 
 包含了自然规律的广义自然法启示了人类一切关于“法”这一事物的理想。它自然而然的会成为一切人类立法和司法所追寻的终极目标，成为人类一切伦理准则的质量标准。
 
+（未完，待续）
 #6-其它/未完待续TBC
