--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/态度与伦理/迟到.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/态度与伦理/迟到.md
@@ -2,9 +2,9 @@
 [现在守时已经没有任何意义了吗？](https://www.zhihu.com/question/404884534/answer/2658513818)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2022-09-03]
+> Last update: [编辑于 2023-09-26]
 > Link: [[责任感]] [[谁的责任]] [[谁的问题]]
-> Category: #【答集】/02-企管答集
+> Category: #【答集】/02-企管答集 #【答集】/01-家族答集 
 > Tag: #2-事业/2C-职业/1-态度与伦理 #1-家族/1B-处世/2-外务/2b-礼节规范
 > 评论区:
 > 泛讨论:
@@ -15,7 +15,7 @@
 
 要是参加会议的有老板甚至有客户，一次严重迟到你就差不多已经可以开除了，损失轻松过万——更不必提你还觉得这“没什么”。
 
-换言之，觉得迟到“没什么”的人一定是没有经历过为迟到买单的人。
+换言之，觉得迟到“没什么”的人一定是没有为迟到买单经历的人。
 
 买单有两种形式，一种是直接经济性的——要么作为老板直接结账，要么是作为员工被老板要账或者直接被开除。
 
