--- a/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/贫穷/摆脱贫穷.md
+++ b/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/贫穷/摆脱贫穷.md
@@ -2,7 +2,7 @@
 [穷人怎么才能翻身？](https://www.zhihu.com/question/444003245/answer/1744384489)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-06-21]
+> Last update: [编辑于 2023-09-25]
 > Link: [[穷开心]] [[读书与行路]] [[穷得没尊严]] [[生而贫穷]] [[真的穷]]
 > Category: #【答集】/01-家族答集
 > Tag: #1-家族/1A-内外/1-内在建设/1d-自强 #1-家族/1F-亲子/1-身为父母
@@ -13,13 +13,7 @@
 
 首先，不要觉得贫穷一定是个劣势。
 
-贫穷——尤其是“受过贫苦，适应贫苦，但是有强烈动力想要摆脱现状”，这在很多雇主眼里是一个加分项。
-
-同样的薪资待遇，对穷人显然比对富人的驱动力强的多，有意义得多。
-
-如果有可能，而且其他方面一样，雇主当然会想要优先雇佣经济状况更差一些的人。
-
-这是穷人在经济上一个极大的基本优势。
+贫穷——尤其是“受过贫苦，适应贫苦，但是有强烈动力想要摆脱现状”，这在很多雇主眼里是一个加分项。同样的薪资待遇，对穷人显然比对富人的驱动力强的多，有意义得多。如果有可能，而且其他方面一样，雇主当然会想要优先雇佣经济状况更差一些的人。这是穷人在经济上一个极大的基本优势。
 
 问题在“其他方面一样”这里——其他方面常常不一样，可能把这个优势抵消。而所谓“穷人翻身”的关键就是找到这些妨碍自己的根本优势发挥出来的“不一样”的地方，通过明智的应对和努力，该回避的回避，该弥补的弥补，争取扬长避短。
 
@@ -41,17 +35,15 @@
 
 这当然是指非常在意报酬。这可以理解，但这如果影响到你努力提高的动力，影响到你的工作表现，那么有多可理解、多可原谅都是无意义的。
 
-这对穷人尤其危险——因为雇主提前就有这种顾虑，随时随地会拿着放大镜去看你有没有这种通病的迹象。就像雇主会默认担心富贵子弟会不努力、不上心，于是会拿着放大镜去观察一切ta们不够努力的迹象一样。
+这对穷人尤其危险——因为雇主提前就有这种顾虑，随时随地会拿着放大镜去看你有没有这种通病的迹象。
 
-因为格外敏感的注意，于是加倍的容易证实。
-
-于是同样是没有按量完成，富贵子弟拿出的理由完全合理，但是却有可能在雇主心里留下一个“果然只是纨绔子弟，不过是拿工作当过家家”的结论。
+就像雇主会默认担心富贵子弟会不努力、不上心，于是会拿着放大镜去观察一切ta们不够努力的迹象一样。因为格外敏感的注意，于是加倍的容易证实。于是同样是没有按量完成，富贵子弟拿出的理由完全合理，但是却有可能在雇主心里留下一个“果然只是纨绔子弟，不过是拿工作当过家家”的结论。
 
 相同的诅咒在“急功近利”问题上对穷苦子弟有一样的效应。
 
 这里你要保持清醒的头脑。
 
-在现代劳动制度下，你真的不满想要辞职，总是可以办到的。觉得不爽就用脚投票，这没有什么大不了。绝对不要对任何人说出所谓“老板只是画大饼骗我们出力”，“我只是想赚钱”，“给钱最实在”这样的鬼话。
+在现代劳动制度下，你真的不满想要辞职，总是可以办到的。觉得不爽就用脚投票，这没有什么大不了。**绝对不要对任何人说出所谓“老板只是画大饼骗我们出力”，“我只是想赚钱”，“给钱最实在”这样的鬼话。**
 
 再说一遍，你可以在心里这么想，你也可以因此直接辞职换下一家，但是**绝对不要说这种蠢话**。我直白点告诉你，那些拱你的火，在工余聚餐里大谈这些抱怨，勾引你“共鸣“的人，转眼间就可能是出卖这些消息给老板的人。
 
@@ -89,9 +81,9 @@
 
 别思考，直接回答。
 
-如果你第一闪念就感到这是贬义词（你愿不愿意被别人称为“既得利益者”？）你就要知道，你已经有愤世嫉俗的倾向。
+**如果你第一闪念就感到这是贬义词（你愿不愿意被别人称为“既得利益者”？）你就要知道，你已经有愤世嫉俗的倾向。**
 
-“既得利益者”，只是一种**显而易见的中性描述**，它根本不代表人所得的利益一定是不正当的——根本连一丝一毫这样的意思都没有。而且它显而易见到了这样的地步——这就是最基本的语文。
+“既得利益者”，只是一种**显而易见的中性描述，**它根本不代表人所得的利益一定是不正当的——根本连一丝一毫这样的意思都没有。而且它显而易见到了这样的地步——这就是最基本的语文。
 
 但是你却下意识的认为这是贬义词 、一点也不认为你自己是既得利益者、也不愿意被别人称呼为既得利益者。
 
@@ -140,6 +132,8 @@
 这三个问题，如果你能想通，直接超脱，那是上上之道。
 
 如果想不通，自己控制住不要表现出来，也一样控制一分就有一分的好处。
+
+--------------------
 
 穷，到底意味着是有多穷？
 
