--- a/【本周更新】/无动于衷.md
+++ b/【本周更新】/无动于衷.md
@@ -4,7 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-02]
 > Link:
-> Tag: [处世, 最近更新]
+> Category: #【答集】/01-家族答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
