--- a/【本周更新】/无风之浪.md
+++ b/【本周更新】/无风之浪.md
@@ -4,18 +4,16 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-09-23]
 > Link:
-> Category: #【答集】/04-社科答集 #【答集】/01-家族答集
+> Category: #【答集】/01-家族答集
 > Tag:
 > 评论区:
 > 泛讨论:
 
 这些仇恨、凌辱性言论会得到的，只是非常短暂的优越感以及同类间的认同感，一般持续五秒左右。如果有人给予回复并展开论战，那样就会产生第二个、第三个五秒。根本就没有啥宏大的“地域资源挤出计划”，只有这种五秒过期的一激灵而已。
 
-怎么，你是不是觉得有点失望？因为让你如此痛苦的罪行，背后却居然没有什么足令天地变色的罪恶、人神共愤的堕落？因为这样无聊的、甚至都没有意义的劣迹没有资格让你愤怒和憎恨、是吗？
+怎么，你是不是觉得有点失望？因为让你如此痛苦的罪行，背后却居然没有什么足令天地变色的罪恶、人神共愤的堕落？因为这样无聊的、甚至都没有意义的劣迹没有资格让你愤怒和憎恨，是吗？
 
-你尚在恨恨不平，凶手怎么可以已经置之脑后，歌舞升平？
-
-你是看不起这种卑贱、平庸的恶，是吗？
+你尚在恨恨不平，凶手怎么可以已经置之脑后，歌舞升平？你是看不起这种卑贱、平庸的恶，是吗？
 
 殊不知，**世界上真正最有力的、最持久、最残暴的邪恶，其实都不是来自那种充满险恶用心、长期隐忍、殚精竭虑的大阴谋，而恰恰是这种5秒级别的、转瞬即逝的、似乎没有任何痕迹的、仿佛宇宙背景辐射一样的微小恶意。**
 
