--- a/【本周更新】/虚假新闻.md
+++ b/【本周更新】/虚假新闻.md
@@ -1,10 +1,11 @@
-# 短标题
+# 虚假新闻
 [菲方称已拆除中国海警在黄岩岛附近部署的阻拦浮标，外交部回应「不要挑衅滋事」，如何看待菲律宾这一行为？](https://www.zhihu.com/question/623844373/answer/3228059945)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-09-27]
 > Link:
-> Tag: [时政, 最近更新]
+> Category: #【答集】/10-百年未有之变局 
+> Tag:
 > 评论区:
 > 泛讨论:
 
