--- a/【文章目录】/【5 - 社会科学】/570 - 政治/571 - 政治学各论/捧杀.md
+++ b/【文章目录】/【5 - 社会科学】/570 - 政治/571 - 政治学各论/捧杀.md
@@ -2,9 +2,9 @@
 [如何应对他人的捧杀？](https://www.zhihu.com/question/22495263/answer/1044964434)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-05-30]
+> Last update: [编辑于 2023-09-30]
 > Link: [[电车难题]]
-> Category: #【答集】/01-家族答集
+> Category: #【答集】/01-家族答集 #【答集】/09-神学答集 
 > Tag: #1-家族/1A-内外/1-内在建设/1e-立志 #3-信仰/3A-Caritas/1-爱 #4-世界史/4A-社科/自然法
 > 评论区:
 > 泛讨论:
@@ -75,8 +75,4 @@
 
 那么，为什么“追求权力”就一定是“有害的”呢？历史上那么多声威赫赫之人，不也并没有个个不得好死吗？有很多人不也名垂青史彪炳后世吗？为什么我就不可以是那个少数例外呢？
 
-因为电车难题。
-
-就是那个
-
-#6-其它/未完待续TBC
+（未完，待续）
