--- a/【本周更新】/反消极.md
+++ b/【本周更新】/反消极.md
@@ -4,7 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-09-30]
 > Link:
-> Tag: [企管, 处世, 最近更新]
+> Category: #【答集】/02-企管答集 #【答集】/01-家族答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
