--- a/【本周更新】/家传马奇诺.md
+++ b/【本周更新】/家传马奇诺.md
@@ -4,7 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-09-30]
 > Link:
-> Tag: [社科, 处世, 最近更新]
+> Category: #【答集】/04-社科答集 #【答集】/01-家族答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
