--- a/【本周更新】/巨星.md
+++ b/【本周更新】/巨星.md
@@ -1,10 +1,11 @@
-# 短标题
+# 巨星
 [中国是不是没有一个人可以称得上是国际巨星？](https://www.zhihu.com/question/265599210/answer/3232572806)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-01]
 > Link:
-> Tag: [最近更新]
+> Category: #【答集】/08-文艺答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
