--- a/【本周更新】/父母先生.md
+++ b/【本周更新】/父母先生.md
@@ -4,7 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-01]
 > Link:
-> Tag: [处世, 最近更新, 性别]
+> Category: #【答集】/01-家族答集 #【答集】/03-第一性 
+> Tag:
 > 评论区:
 > 泛讨论:
 
