--- a/【本周更新】/轻如柳.md
+++ b/【本周更新】/轻如柳.md
@@ -4,7 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-02]
 > Link:
-> Tag: [军事]
+> Category: #【答集】/07-军事技术与艺术 
+> Tag:
 > 评论区:
 > 泛讨论:
 
