--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/表达意愿/父母先生.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/表达意愿/父母先生.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-10-01]
 > Link:
 > Category: #【答集】/01-家族答集 #【答集】/03-第一性 
-> Tag:
+> Tag: #1-家族/1B-处世/2-外务/2f-表达意愿 #1-家族/1E-两性/1-亲密关系/1a-交往准则/优质选择 
 > 评论区:
 > 泛讨论:
 
