--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/交友之道/情理难融.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/交友之道/情理难融.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-10-01]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/01-家族答集 
-> Tag:
+> Tag: #1-家族/1B-处世/2-外务/2g-交友之道
 > 评论区:
 > 泛讨论:
 
