--- a/【文章目录】/【1 - 哲学类】/170 - 心理学/173 - 一般心理/情绪/洪武大锅.md
+++ b/【文章目录】/【1 - 哲学类】/170 - 心理学/173 - 一般心理/情绪/洪武大锅.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-09-28]
 > Link:
 > Category: #【答集】/01-家族答集 
-> Tag:
+> Tag: #1-家族/1A-内外/1-内在建设/1d-自强 #1-家族/1D-心理/1-情绪 
 > 评论区:
 > 泛讨论:
 
