--- a/【文章目录】/【5 - 社会科学】/590 - 军事/593 - 军事教育 & 训练/情报学/虚假新闻.md
+++ b/【文章目录】/【5 - 社会科学】/590 - 军事/593 - 军事教育 & 训练/情报学/虚假新闻.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-09-27]
 > Link:
 > Category: #【答集】/10-百年未有之变局 
-> Tag:
+> Tag: #2-事业/2A-功夫/1-核心能力/情报分析 #4-世界史/4A-社科/新闻 
 > 评论区:
 > 泛讨论:
 
