--- a/【文章目录】/【5 - 社会科学】/590 - 军事/596-598 军兵种/军兵/神速.md
+++ b/【文章目录】/【5 - 社会科学】/590 - 军事/596-598 军兵种/军兵/神速.md
@@ -4,7 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-09-09]
 > Link:
-> Tag: #4-世界史/4C-军事/3-军兵种
+> Category: #【答集】/07-军事技术与艺术
+> Tag: #4-世界史/4C-军事/3-军兵种 
 > 评论区:
 > 泛讨论:
 
