--- a/【文章目录】/【9 - 艺术类】/940 - 绘画 & 书法/写实.md
+++ b/【文章目录】/【9 - 艺术类】/940 - 绘画 & 书法/写实.md
@@ -2,14 +2,14 @@
 [可以评价一下这张渲染图吗？](https://www.zhihu.com/question/491354437/answer/2162918175)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-10-10]
+> Last update: [编辑于 2023-10-04]
 > Link: [[画的关键]] [[原画]] [[艺术之美]] [[雅俗共赏]] [[艺术文凭]] [[着色]] [[画出问题]] [[艺术废人]] [[白墙黑瓦]] [[书法]] [[职业规划]] [[具象建筑]]
-> Category: #【答集】/08-文艺答集
+> Category: #【答集】/08-文艺答集 #【答集】/05-科学答集 
 > Tag: #2-事业/2A-功夫
 > 评论区:
 > 泛讨论:
 
-![](https://pica.zhimg.com/50/v2-d0903e8c8cf73a08ad20d90861365908_720w.jpg?source=1940ef5c)
+![Image](https://pic1.zhimg.com/50/v2-d0903e8c8cf73a08ad20d90861365908_720w.jpg?source=1940ef5c)
 
 写实的画面，要体现出你对世界的理解。
 
