--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原理/理性的爱.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原理/理性的爱.md
@@ -2,7 +2,7 @@
 [男人对恋爱过于理性是否一定表示他不够爱一个女生？](https://www.zhihu.com/question/22057782/answer/1496798318)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-05-16]
+> Last update: [编辑于 2023-10-04]
 > Link: [[长时间保持理性]] [[理性的代价]] [[爱的好处]] [[爱的底线]] [[爱的资格]] [[不配被爱]]
 > Category: #【答集】/01-家族答集
 > Tag: #3-信仰/3A-Caritas/1-爱 #1-家族/1E-两性/1-亲密关系/1a-交往准则/贪与爱
@@ -21,11 +21,11 @@
 
 爱而没有理性是难以想象的事情。与爱所需要的理性相比，那点解方程、算微分的数学演绎能力根本不值一提。
 
-人们常因为爱人的人会做出与自利的人截然不同的结论而将因爱而做出的决定视为“非理性”的结果。——搞清楚，**那是因为人家孜孜以求的本来就不是自己获利最大化，本来就是别人利益的最大化，是人家的价值观本身就与“常人常事”相反。
+人们常因为爱人的人会做出与自利的人截然不同的结论而将因爱而做出的决定视为“非理性”的结果。——搞清楚，**那是因为人家孜孜以求的本来就不是自己获利最大化，本来就是别人利益的最大化，**是人家的**价值观**本身就与“常人常事”相反。
 
 在那个舍己为人的诉求之下，你再去看人家的谋略和计划，你才看得到到底有没有理性。以“人不为己天诛地灭”为准绳，当然会看到舍己为人的计划每一步都是“非理性”。
 
-仅仅用“太理性了是不是不爱的证明”这个表述，都意味着人自己的基本思考方式仍然站在“自利即理性，理性即自理”的基准立场上没有转变过来。
+仅仅用“太理性了是不是不爱的证明”这个表述，都意味着人自己的基本思考方式仍然站在“自利即理性，理性即自利”的基准立场上没有转变过来。
 
 这实际上问的是“对方太自利了，为自己打算得太周全了，是不是不够爱我”。
 
