--- a/【文章目录】/【9 - 艺术类】/900 - 艺术总论/画坑.md
+++ b/【文章目录】/【9 - 艺术类】/900 - 艺术总论/画坑.md
@@ -2,13 +2,12 @@
 [老爸想砍我双手叫我不要画画净浪费钱，我还有救吗？](https://www.zhihu.com/question/504371119/answer/2275477101)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-06-05]
+> Last update: [编辑于 2023-10-04]
 > Link: [[画出问题]] [[敢画]] [[画的关键]] [[渔隐]] [[艺术文凭]] [[艺术工匠]] [[艺术本质]] [[学习的快乐]] [[前途]] [[职业规划]] [[前途]]
+> Category: #【答集】/08-文艺答集 
 > Tag: #2-事业/2A-功夫/1-核心能力/学绘画 #2-事业/2C-职业/2-选择与规划
 > 评论区:
 > 泛讨论:
-
-“画画”没前途？
 
 “画画”没前途？
 
@@ -56,7 +55,7 @@
 
 注意关键要害——
 
-**1）它天性不受人工智能威胁**。律师、医生、公务员、甚至生物、材料……都不见得有这把握。
+**1）它天性不受人工智能威胁。**律师、医生、公务员、甚至生物、材料……都不见得有这把握。
 
 不会突然“结构性失业”是一个至关重要的特性，将来你们等着看。
 
