--- a/【本周更新】/丢脸强盗.md
+++ b/【本周更新】/丢脸强盗.md
@@ -1,10 +1,11 @@
-# 短标题
+# 丢脸强盗
 [德国纳粹与日本鬼子谁最残暴？](https://www.zhihu.com/question/604611811/answer/3234696494)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-03]
 > Link:
-> Tag: [最近更新]
+> Category: #【答集】/04-社科答集 
+> Tag: #4-世界史/4D-历史 
 > 评论区:
 > 泛讨论:
 
