--- a/【本周更新】/历史笑柄.md
+++ b/【本周更新】/历史笑柄.md
@@ -1,10 +1,11 @@
-# 短标题
+# 历史笑柄
 [如何成为历史笑柄？](https://www.zhihu.com/question/620277634/answer/3242044681)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-09]
 > Link:
-> Tag: [最近更新]
+> Category: #【答集】/01-家族答集 
+> Tag: #1-家族/1A-内外/1-内在建设/1e-立志 #1-家族/1D-心理/3-安全感 
 > 评论区:
 > 泛讨论:
 
