--- a/【本周更新】/无利可图.md
+++ b/【本周更新】/无利可图.md
@@ -4,7 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-06]
 > Link:
-> Tag: [科学, 时政, 最近更新]
+> Category: #【答集】/05-科学答集 #【答集】/10-百年未有之变局 
+> Tag: #4-世界史/4A-社科/经贸 
 > 评论区:
 > 泛讨论:
 
