--- a/【本周更新】/泄洪渠.md
+++ b/【本周更新】/泄洪渠.md
@@ -4,7 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-04]
 > Link:
-> Tag: [处世, 最近更新, 性别]
+> Category: #【答集】/01-家族答集 #【答集】/03-第一性 
+> Tag: #1-家族/1E-两性/1-亲密关系/1b-交往案例/恋爱 #1-家族/1D-心理/1-情绪 
 > 评论区:
 > 泛讨论:
 
