--- a/【本周更新】/监控.md
+++ b/【本周更新】/监控.md
@@ -1,10 +1,11 @@
-# 短标题
+# 监控
 [我在孩子兜里放了监听设备，老师发现后勒令我们退园，我做错了吗？](https://www.zhihu.com/question/428733663/answer/3242062218)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-09]
 > Link:
-> Tag: [最近更新]
+> Category: #【答集】/04-社科答集 
+> Tag: #4-世界史/4A-社科/教育 #2-事业/2C-职业/3-职业分析 
 > 评论区:
 > 泛讨论:
 
