--- a/【本周更新】/第二战场.md
+++ b/【本周更新】/第二战场.md
@@ -4,7 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-09]
 > Link:
-> Tag: [时政, 最近更新]
+> Category: #【答集】/10-百年未有之变局 
+> Tag: #4-世界史/4C-军事/2-兵法与战术 
 > 评论区:
 > 泛讨论:
 
