--- a/【本周更新】/餐饮业.md
+++ b/【本周更新】/餐饮业.md
@@ -1,9 +1,10 @@
-# 短标题
+# 餐饮业
 [韩寒被曝因餐厅亏损上亿，投资人称餐厅名气响但餐品太难吃，自己亏损上千万，具体情况如何？](https://www.zhihu.com/question/625753258/answer/3247527275)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-12]
 > Link:
+> Category: 
 > Tag: [最近更新]
 > 评论区:
 > 泛讨论:
