--- a/沙海拾金/泛讨论/泛讨论_巴以战争.md
+++ b/沙海拾金/泛讨论/泛讨论_巴以战争.md
@@ -1,12 +1,6 @@
-# 短标题
-[直觉这次以色列的地面部队要吃标枪、NLAW…](https://www.zhihu.com/pin/1696693683091726336)
+> Backlink: 
 
-> Author: #0-Anonymity
-> Last update: [编辑于 2023-10-15]
-> Link:
-> Tag: [想法集]
-> 评论区:
-> 泛讨论:
+[直觉这次以色列的地面部队要吃标枪、NLAW…](https://www.zhihu.com/pin/1696693683091726336)
 
 直觉这次以色列的地面部队要吃标枪、NLAW、米兰、毒刺不小的亏。
 
