--- a/【本周更新】/世界第一.md
+++ b/【本周更新】/世界第一.md
@@ -1,10 +1,11 @@
-# 短标题
+# “世界第一“
 [侄子问我一个到处都是流浪汉，枪击，零元购，满脑子都是侵略的地方怎么做到经济，科技，军事都是世界第一?](https://www.zhihu.com/question/614715103/answer/3248515092)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-13]
 > Link:
-> Tag: [最近更新]
+> Category: #【答集】/10-百年未有之变局 
+> Tag: 
 > 评论区:
 > 泛讨论:
 
