--- a/【文章目录】/【7 - 世界史地】/730 - 亚洲史地/735 - 中东/巴以.md
+++ b/【文章目录】/【7 - 世界史地】/730 - 亚洲史地/735 - 中东/巴以.md
@@ -4,8 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-15]
 > Link:
-> Category: 
-> Tag: [时政, 最近更新]
+> Category: #【答集】/10-百年未有之变局 
+> Tag: #4-世界史/4B-政治/外交 #4-世界史/4D-历史 
 > 评论区:
 > 泛讨论:
 
