--- a/【本周更新】/失信之罪.md
+++ b/【本周更新】/失信之罪.md
@@ -1,10 +1,11 @@
-# 短标题
+# 失信之罪
 [如何应对上级的批评？](https://www.zhihu.com/question/626919122/answer/3258218446)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-21]
 > Link:
-> Tag: [最近更新]
+> Category: #【答集】/02-企管答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
