--- a/【本周更新】/沟通偏差.md
+++ b/【本周更新】/沟通偏差.md
@@ -1,10 +1,11 @@
-# 短标题
+# 沟通偏差
 [吵架男朋友控制不住情绪自残我该怎么办？](https://www.zhihu.com/question/625523384/answer/3252323141)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-17]
 > Link:
-> Tag: [最近更新]
+> Category: #【答集】/03-第一性 
+> Tag:
 > 评论区:
 > 泛讨论:
 
