--- a/【本周更新】/牵绳.md
+++ b/【本周更新】/牵绳.md
@@ -1,10 +1,11 @@
-# 短标题
+# 牵绳
 [四川崇州两大型犬撕咬2岁半女童致严重受伤！如何看待城市里的狗伤人事件？](https://www.zhihu.com/question/626327523/answer/3253378849)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-17]
 > Link:
-> Tag: [最近更新]
+> Category: #【答集】/04-社科答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
