--- a/【本周更新】/见好就收.md
+++ b/【本周更新】/见好就收.md
@@ -4,7 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-23]
 > Link:
-> Tag: [企管, 最近更新]
+> Category: #【答集】/02-企管答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
