--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/160 - 形而上学总论/论功夫/扎实.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/160 - 形而上学总论/论功夫/扎实.md
@@ -2,7 +2,7 @@
 [想学的东西太多，而自己能力有限，为此非常焦虑，该怎么办？](https://www.zhihu.com/question/20667527/answer/2731967218)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-07-19]
+> Last update: [编辑于 2023-10-21]
 > Link: [[学会]] [[能力]]
 > Category: #【答集】/01-家族答集
 > Tag: #1-家族/1B-处世/2-外务/2c-求学求知 #1-家族/1F-亲子/1-身为父母
@@ -35,7 +35,7 @@
 
 **换言之，你需要主动学习的技能只有两门。而且第二门是第一门生出来的。**
 
-**有了一门，可以入行。有两门，可以极大的避免直接竞争**。而且从此可以更快的掌握其它必要的技能，越来越安全。
+**有了一门，可以入行。有两门，可以极大的避免直接竞争。**而且从此可以更快的掌握其它必要的技能，越来越安全。
 
 到了这个境界，新的技能对你并不是什么了不起的东西了。你需要，你就能很快的掌握，然后稍微做几个实际项目就会熟练并且有自己的发展。
 
@@ -55,8 +55,8 @@
 
 看明白了吗？父母们？
 
-**技能与否，是按照足以安身立命为标准的。扎实与否，是按照职业要求为标准的**。先让小朋友们学学包馄饨煮馄饨，包到能开馄饨店去卖、包到十指如飞、吃到的人都拍案赞叹的水平。拉拉面也行、煮鸡蛋羹也行。
+**技能与否，是按照足以安身立命为标准的。扎实与否，是按照职业要求为标准的。**先让小朋友们学学包馄饨煮馄饨，包到能开馄饨店去卖、包到十指如飞、吃到的人都拍案赞叹的水平。拉拉面也行、煮鸡蛋羹也行。
 
 让ta先体会到专业到底是个什么门槛，是个什么概念，然后ta自然会对学习的时候因式分解应该练习到什么水平、如何练到这个水平有更直观的意识。这种沉稳、务实，自然会保佑ta不会整天胡思乱想。
 
-### 学什么东西，就要学扎实。 ###
+学什么东西，就要学扎实。
