--- a/【文章目录】/【4 - 应用科学】/430 - 农业/回家种地.md
+++ b/【文章目录】/【4 - 应用科学】/430 - 农业/回家种地.md
@@ -2,9 +2,9 @@
 [想回家种地，有没有什么建议？](https://www.zhihu.com/question/308217192/answer/2752582222)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2022-11-10]
+> Last update: [编辑于 2023-10-24]
 > Link: [[创业契机]]
-> Category: #【答集】/02-企管答集
+> Category: #【答集】/02-企管答集 #【答集】/01-家族答集 
 > Tag: #2-事业/2C-职业/3-职业分析
 > 评论区:
 > 泛讨论:
