--- a/【本周更新】/七天无理由.md
+++ b/【本周更新】/七天无理由.md
@@ -4,8 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-16]
 > Link:
-> Category: 
-> Tag: [处世, 性别]
+> Category:  #【答集】/01-家族答集 #【答集】/03-第一性 
+> Tag:
 > 评论区:
 > 泛讨论:
 
@@ -37,6 +37,6 @@
 
 **你以自居“诚信债务人”为荣，却陷我于“隐蔽放债人”的不义。你不但不清楚这是多大的侮辱，还在以此为荣，等待“夸奖”。**
 
-![Image](https://pic1.zhimg.com/50/v2-dd0dec2a3e439b38373901a1556b532d_720w.gif?source=1940ef5c)
+![Image](https://picx.zhimg.com/50/v2-dd0dec2a3e439b38373901a1556b532d_720w.gif?source=1940ef5c)
 
 讽刺的是，这很好的解决了你的“结婚压力”——你离门槛还有显著距离，你真没必要担心这个。
