--- a/【本周更新】/内六角螺栓.md
+++ b/【本周更新】/内六角螺栓.md
@@ -4,7 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-18]
 > Link:
-> Tag: [科学, 最近更新]
+> Category: #【答集】/05-科学答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
