--- a/【本周更新】/南存北亡.md
+++ b/【本周更新】/南存北亡.md
@@ -4,7 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-19]
 > Link:
-> Tag: [社科, 时政, 最近更新]
+> Category: #【答集】/04-社科答集 #【答集】/10-百年未有之变局 
+> Tag: 
 > 评论区:
 > 泛讨论:
 
