--- a/【本周更新】/巴以决议.md
+++ b/【本周更新】/巴以决议.md
@@ -1,10 +1,11 @@
-# 短标题
+# 巴以决议
 [美英法日四国投票反对，联合国安理会未通过巴以相关决议，如何看待这一投票结果？](https://www.zhihu.com/question/626453451/answer/3253063338)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-17]
 > Link:
-> Tag: [时政, 最近更新]
+> Category: #【答集】/10-百年未有之变局 
+> Tag:
 > 评论区:
 > 泛讨论:
 
