--- a/【本周更新】/带刀.md
+++ b/【本周更新】/带刀.md
@@ -1,10 +1,11 @@
-# 短标题
+# 带刀
 [如何看待随身带刀的人？](https://www.zhihu.com/question/41645638/answer/3260476867)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-23]
 > Link:
-> Tag: [最近更新]
+> Category: #【答集】/04-社科答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
