--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/修养/自卑.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/修养/自卑.md
@@ -2,7 +2,7 @@
 [如何克服自卑？](https://www.zhihu.com/question/20694013/answer/1846677969)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-08-29]
+> Last update: [编辑于 2023-10-31]
 > Link: [[卑微]] [[不可替代]] [[爱]]
 > Category: #【答集】/01-家族答集
 > Tag: #1-家族/1A-内外/1-内在建设/1b-修养
@@ -19,7 +19,7 @@
 
 它能大量的避免你与人争夺你“应得”的东西——别听那些幸存者如何红光满面、侃侃而谈，ta们只是在捡着成功案例、高光时刻反刍，没有真正的全局衡量过那么多的“正义的追索”算上总体的成功率和成本，到底值不值。
 
-这还没去真的计算到底有多少真的是正义的。
+这还没去认真计算到底有多少真的是正义的。
 
 坦白讲，大部分都是“自信”出来的“正义”——甚至干脆就是基于贪婪而创造出来的“正义”。
 
@@ -29,11 +29,11 @@
 
 不是“谦虚”，谦虚是假的——那只是宣传口的话术罢了。
 
-做到这些的，就是自卑。
+为你做到这些的，就是自卑。
 
 自卑的真正问题，不在自卑身上，而在于自卑通过焦虑的痛苦而造成的心理动力，因为**学习和修炼的方法的失当**而被徒然浪费了。
 
-发动机在吼叫烧油，震的你屁股发麻，手心发痒，耳朵发懵，
+发动机在吼叫烧油，震得你屁股发麻，手心发痒，耳朵发懵，
 
 但是因为你没挂上离合器，车没有在动。
 
@@ -49,7 +49,7 @@
 
 比如拉帮结派、互相注射麻药的“朋友圈”。
 
-比如对于任何触及（哪怕只是是出于ta自己的联想而触及）到他的痛处的人的坚决“反击”和排除——油盐不进。
+比如对于任何触及（哪怕只是出于ta自己的联想而触及）到他的痛处的人的坚决“反击”和排除——油盐不进。
 
 等等等等。
 
@@ -71,7 +71,7 @@
 
 你自卑，你没有把握取胜，你还是要去战斗。
 
-你自卑，你害怕不能生还，你还是要去战斗。
+你自卑，你害怕不能成功，你还是要去拼搏。
 
 你自卑，你觉得没有人会喜欢你，你还是要去爱。
 
