--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/自强/木秀于林.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/自强/木秀于林.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-09-19]
-> Link: [[精英]] [[能力与责任]] [[不卑不亢 1]] [[不卑不亢 2]] [[至勇]] [[天赋特权]] [[天赋 1]] [[正常]] [[公权力]] [[安全感]] [[家族]] [[内务班底]] [[门当户对]] [[爱]]
+> Link: [[精英]] [[能力与责任]] [[不卑不亢 1]] [[不卑不亢 2]] [[至勇]] [[【文章目录】/【1 - 哲学类】/190 - 伦理学/195 - 社会伦理/天赋特权]] [[天赋 1]] [[正常]] [[公权力]] [[安全感]] [[家族]] [[内务班底]] [[门当户对]] [[爱]]
 > Category: #【答集】/01-家族答集
 > Tag: #1-家族/1C-安全/1-自我保护/1a-隐私隔离  #1-家族/1A-内外/1-内在建设/1b-修养 #2-事业/2B-投资
 > 评论区:
