--- a/【文章目录】/【4 - 应用科学】/490 - 商学/494 - 企业管理/以法责众.md
+++ b/【文章目录】/【4 - 应用科学】/490 - 商学/494 - 企业管理/以法责众.md
@@ -2,10 +2,10 @@
 [讯飞员工因提前一小时抢老乡鸡免费餐被罚，科大讯飞声明称，属主观消极怠工，如何看待此事？](https://www.zhihu.com/question/626489582/answer/3254062011)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-10-18]
+> Last update: [编辑于 2023-10-30]
 > Link:
 > Category: #【答集】/02-企管答集 #【答集】/01-家族答集 
-> Tag:
+> Tag: #2-事业/2D-企管/1-管理者素质 
 > 评论区:
 > 泛讨论:
 
@@ -23,7 +23,7 @@
 
 自己受奖励的，自然回去会总结经验教训，告诫大家这次好惊险，以后长点心，甚至可以拿奖金去团建请客，与自己的好兵同乐，自不必提。
 
-自己受了处罚的，回去施压、处置，自然也师出有名——你去吃免费餐，老子被公司罚了两万，扣了绩效，你自己掂量一下我给你点颜色你活不活该？总部对所有的员工，光是调查清楚谁参与、谁领头就要半个月，目标人群几十上百人，那当然叫“法不责众”。但是我是你的直属上司，我对你们这15个人，拎出领头这3个来挂城头，你们2在我面前还有什么“众”？——此为刚的做法。
+自己受了处罚的，回去施压、处置，自然也师出有名——你去吃免费餐，老子被公司罚了两万，扣了绩效，你自己掂量一下我给你点颜色你活不活该？总部对所有的员工，光是调查清楚谁参与、谁领头就要半个月，目标人群几十上百人，那当然叫“法不责众”。但是我是你的直属上司，我对你们这15个人，拎出领头这3个来挂城头，你们3在我面前还有什么“众”？——此为刚的做法。
 
 也有人有不同的领导风格，回来谁也不罚，自我检讨——“这个怪我自己没给你们加强这方面的沟通，责任我背，大家下不为例”——下面害这种老大受罚的员工自然过意不去，谁还要讲风凉话，自然就不是人了。这是选择将损失转化为管理资本——此为柔的做法。
 
