--- a/【文章目录】/【7 - 世界史地】/730 - 亚洲史地/735 - 中东/南存北亡.md
+++ b/【文章目录】/【7 - 世界史地】/730 - 亚洲史地/735 - 中东/南存北亡.md
@@ -2,10 +2,10 @@
 [为什么网上突然出现大量正统犹太人反对以色列和犹太复国主义？](https://www.zhihu.com/question/626242551/answer/3254388315)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-10-19]
+> Last update: [编辑于 2023-11-06]
 > Link:
 > Category: #【答集】/04-社科答集 #【答集】/10-百年未有之变局 
-> Tag: 
+> Tag: #4-世界史/4D-历史 
 > 评论区:
 > 泛讨论:
 
@@ -13,7 +13,7 @@
 
 不要误以为以色列人没试过玩狠的，ta们在两千多年前和今天的巴勒斯坦人的处境非常类似，所以一样试过“武德充沛”的道路。
 
-古以色列分为十二支派，其中除了犹大支派和利未支派外，都属于北以色列，都是自认为有上帝保佑、热爱武力和权谋的风格。这一支信仰上帝的方式基本上是把耶和华当成“万军之神”，认为自己在“征服迦南”的过程中屡战屡胜正是耶和华保佑的结果。所以这一大帮是雄心勃勃要整军经武，逮住机会就要“一统天下”，拿走整个“应许之地”的。这十二派祭拜耶和华的方式非常类似周边的土著居民，也是血呼啦滋神神叨叨的——人祭之类的血祭屡见不鲜，而且不择地点、不严仪轨，甚至经常混着祭拜自认为很灵的其他偶像求雨求胜。
+古以色列分为十二支派，其中除了犹大支派和利未支派外，都属于北以色列，都是自认为有上帝保佑、热爱武力和权谋的风格。这一支信仰上帝的方式基本上是把耶和华当成“万军之神”，认为自己在“征服迦南”的过程中屡战屡胜正是耶和华保佑的结果。所以这一大帮是雄心勃勃要整军经武，逮住机会就要“一统天下”，拿走整个“应许之地”的。这十派祭拜耶和华的方式非常类似周边的土著居民，也是血呼啦滋神神叨叨的——人祭之类的血祭屡见不鲜，而且不择地点、不严仪轨，甚至经常混着祭拜自认为很灵的其他偶像求雨求胜。
 
 而南方支派呢？奉行的是“专守事大”政策——正是这一部分人在主张圣殿祭拜、专业祭祀集中祭拜。旧约利未记就是这帮人写的，可以看看。利未记里有一件极为特殊的约定，那就是安息日——“第七日，无论何工都不可做。”这个不可做，是指什么都不能做，被人砍死都不能拿刀的“不可做”。可想而知犹大、利未两支派是什么地缘策略——“老大你打到我面前我就投降，你用不着打我，我也没想跟你打”。
 
@@ -37,7 +37,7 @@
 
 **这是第一次北国路线招来毁灭。也是第一次南国路线保住幸存。**
 
-不过我们先按下这段公案不表，单说时过境迁，一百多年后，巴比伦席卷而来，南国全体贵族、工匠沦为巴比伦之囚。至此第一圣殿被毁。
+我们再拨动时间的转轮，时过境迁，一百多年后，巴比伦席卷而来，南国全体贵族、工匠沦为巴比伦之囚。至此第一圣殿被毁。
 
 然而，因为南国的事大驯服传统，坦率讲以色列俘虏们在巴比伦的日子并不算特别难捱——实际上有惊无险，平安度过。
 
