--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -3,6 +3,34 @@
 > Author: #0-Anonymity 
 > Last update: [编辑于 2023-09-14]
 
+
+所谓正确的决策，不是什么“后来果然很幸福”的决策、而是最能抑制后悔的决策。
+
+——[《断续》](https://www.zhihu.com/question/483204673/answer/3273430536?utm_psn=1703251522878738432)
+
+---
+  
+尽管的确是一将功成万骨枯，但是有可能真正杰出的，只有老兵，
+
+而不可能是**纹满伤疤的演员**。
+
+——[《事故青年》](https://www.zhihu.com/question/61134374/answer/1459491434)
+
+---
+
+仅仅因为对方如何说了就绝望、断念，这是一种对对方的隐秘的崇拜。
+——[《父母先生》](https://www.zhihu.com/question/275805983/answer/3232669037?utm_psn=1691705887427768320)
+
+---
+
+人做工作，或者说选职业，要有“奉天承运”的觉悟，要追求感动上天——即相信上天给你安排这份工，必有它将来的安排。 
+
+只要不违反心中的道德律，我只管尽可能出色的、真正尽力的完成任务。
+
+——[《向问天 任我行》](https://www.zhihu.com/question/278704470/answer/3244728222?utm_psn=1695283841835573248)
+
+---
+
 有时明智和软弱，是很难分辨的。
 
 所以“奋不顾身”才值得额外的尊敬。
