--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/160 - 形而上学总论/论天赋/天赋 1.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/160 - 形而上学总论/论天赋/天赋 1.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-08-04]
-> Link: [[天赋特权]] [[高估]] [[蠢聪明]] [[悟性]] [[一点就透]] [[厉害思维]] [[极度聪明]] [[自视]] [[精英]] [[求学]] [[学习的快乐]] [[高等教育]] [[能力与责任]] [[天赋 2]]
+> Link: [[【文章目录】/【1 - 哲学类】/190 - 伦理学/195 - 社会伦理/天赋特权]] [[高估]] [[蠢聪明]] [[悟性]] [[一点就透]] [[厉害思维]] [[极度聪明]] [[自视]] [[精英]] [[求学]] [[学习的快乐]] [[高等教育]] [[能力与责任]] [[天赋 2]]
 > Category: #【答集】/01-家族答集
 > Tag: #1-家族/1B-处世/2-外务/2a-补强原则 #1-家族/1G-统绪/1-规矩 #5-专题合集/合集1-概念与定义
 > 评论区:
