--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/160 - 形而上学总论/论天赋/天赋 2.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/160 - 形而上学总论/论天赋/天赋 2.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-06-10]
-> Link: [[天赋特权]] [[天赋 1]] [[瞧不起努力]] [[坚持]]
+> Link: [[【文章目录】/【1 - 哲学类】/190 - 伦理学/195 - 社会伦理/天赋特权]] [[天赋 1]] [[瞧不起努力]] [[坚持]]
 > Category: #【答集】/01-家族答集
 > Tag: #5-专题合集/合集1-概念与定义 #1-家族/1B-处世/2-外务/2c-求学求知
 > 评论区:
