--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/修养/在意讨厌.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/192 - 个人伦理/修养/在意讨厌.md
@@ -2,9 +2,9 @@
 [总是害怕被讨厌该怎么办？](https://www.zhihu.com/question/480980081/answer/2090195429)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-08-29]
+> Last update: [编辑于 2023-11-02]
 > Link: [[被讨厌]] [[求学]] [[尊师]] [[三观可塑期]] [[服从]] [[世界史]] [[一点就透]] [[聪明误]] [[悲观与乐观]]
-> Category: #【答集】/03-第一性
+> Category: #【答集】/01-家族答集
 > Tag: #1-家族/1E-两性/1-亲密关系/1a-交往准则/优质选择 #1-家族/1B-处世/2-外务/2c-求学求知 #1-家族/1A-内外/1-内在建设/1b-修养
 > 评论区:
 > 泛讨论:
