--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/193 - 家庭伦理/家庭伦理/双胞胎.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/193 - 家庭伦理/家庭伦理/双胞胎.md
@@ -2,7 +2,7 @@
 [为什么双胞胎一定要分出哥哥弟弟/姐姐妹妹？](https://www.zhihu.com/question/40577784/answer/1842402661)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-03-19]
+> Last update: [编辑于 2023-11-06]
 > Link: [[名分]] [[尊师]] [[礼敬]] [[愿意但不满意]]
 > Category: #【答集】/01-家族答集
 > Tag: #1-家族/1G-统绪/1-规矩 #1-家族/1F-亲子/1-身为父母
@@ -11,7 +11,7 @@
 
 这条很简单，因为这里分出上下，方便构建稳定关系。
 
-**一切的关系在本质上都不是平等关系**，它必然因为关系的性质分出主动与被动，决定与被决定，发起与跟随，提出与批准，建议与否决……这些先后、上下、主从如此等等的不对称差异来。
+**一切的关系在本质上都不是平等关系，**它必然因为关系的性质分出主动与被动，决定与被决定，发起与跟随，提出与批准，建议与否决……这些先后、上下、主从如此等等的不对称差异来。
 
 **所谓的“平等关系”，最本质的实现方式就是将彼此的关系临时化**，在任何交互开始或进行之中，通过约定或者动态的博弈形成临时的先后，上下、主从关系，而该事务一旦结束，既定的先后、上下、主从关系随即作废。
 
@@ -21,7 +21,9 @@
 
 这样的绝对的平等关系，仅仅存在于旷野之中偶然相遇的素不相识的陌生人之间。这时候对等的无知造成了双方真实的平等。
 
-**因此，一切“平等关系”，即“默认关系恒久处于待定状态”——或者干脆的说，即是本质的“无关系”。**
+**因此，一切“平等关系”，本质上就是“临时而随机的关系”，即“默认关系处于待定状态”。**
+
+**干脆的说，“绝对平等的关系”即是本质的“无关系”。**
 
 这样的关系的好处，自然是没有谁是“系统化的上位者”，但是存在一个显然的坏处——**一切出于平等关系的交互，都要反复的付出构建合作关系的成本。**
 
@@ -53,7 +55,7 @@
 
 如果你想明白了，就要停止那种想在自己的高频关系中追求“平等”的妄念——不是哪个坏人不允许，而是**数学**不允许。硬要抵抗这个法则，只会导致你被扣更多的税，失去更多本来可以从这些关系中获得的盈余，**从而反而使你更没有本钱去与外人尝试构建基于平等关系的合作**。
 
-## 如果你不打算接受任何“不平等”，你将同时失去追求更多平等的本钱。
+## 如果你不打算接受任何“不平等”，你将同时失去追求更多平等的本钱。 ##
 
 你们看懂没有？
 
