--- a/【文章目录】/【5 - 社会科学】/540 - 社会学/544 - 家庭 & 族制/教而后养.md
+++ b/【文章目录】/【5 - 社会科学】/540 - 社会学/544 - 家庭 & 族制/教而后养.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-10-25]
 > Link:
 > Category: #【答集】/01-家族答集 #【答集】/03-第一性 
-> Tag:
+> Tag: #1-家族/1E-两性/1-亲密关系/1b-交往案例/恋爱 #1-家族/1F-亲子/2-身为子女 #1-家族/1G-统绪 
 > 评论区:
 > 泛讨论:
 
