--- a/【文章目录】/【5 - 社会科学】/570 - 政治/578 - 国际关系/反对票.md
+++ b/【文章目录】/【5 - 社会科学】/570 - 政治/578 - 国际关系/反对票.md
@@ -1,11 +1,11 @@
-# 巴以决议
+# 反对票
 [美英法日四国投票反对，联合国安理会未通过巴以相关决议，如何看待这一投票结果？](https://www.zhihu.com/question/626453451/answer/3253063338)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-10-17]
 > Link:
 > Category: #【答集】/10-百年未有之变局 
-> Tag:
+> Tag: #4-世界史/4B-政治/博弈 
 > 评论区:
 > 泛讨论:
 
