--- a/【文章目录】/【7 - 世界史地】/710 - 世界史地/713 - 世界文化史/东方不败.md
+++ b/【文章目录】/【7 - 世界史地】/710 - 世界史地/713 - 世界文化史/东方不败.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-10-23]
 > Link:
 > Category: #【答集】/04-社科答集 
-> Tag: 
+> Tag: #4-世界史/4D-历史 #4-世界史/4F-文艺/1-文化 
 > 评论区:
 > 泛讨论:
 
