--- a/【文章目录】/【3 - 自然科学】/390 - 人类学/厌倦.md
+++ b/【文章目录】/【3 - 自然科学】/390 - 人类学/厌倦.md
@@ -2,7 +2,7 @@
 [为什么人类天天吃同样的东西很快会腻，但是动物比如说牛天天吃草却从不会腻？](https://www.zhihu.com/question/492888437/answer/2196379477)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-11-02]
+> Last update: [编辑于 2023-11-19]
 > Link: [[自然法]] [[世界史]] [[爱]] [[长时间保持理性]] [[理性的爱]] [[理性的代价]] [[以弱悯强]] [[同情的资格]] [[孰强孰弱]] [[痛苦根源]] [[对人类失望]] [[Sin]] [[天赋 1]] [[良知]] [[人吃人]] [[己所不欲勿施于人]] [[可怜者可恨]]
 > Category: #【答集】/05-科学答集
 > Tag: #4-世界史/4D-历史 #4-世界史/4E-科学技术/1-科学
@@ -13,9 +13,7 @@
 
 易代入，是指人类拥有将自己代入其它事物的本能能力。
 
-人类很容易设想“假如我是一只老虎，我看到了一只羊”，或者“假如我是一只羊，我看到了一只老虎”。也很容易设想“如果我是张三，但是是我站在老虎面前，我将xxx”。
-
-这种本能的代入能力，实际上是理性思维、抽象思维的起点。
+人类很容易设想“假如我是一只老虎，我看到了一只羊”，或者“假如我是一只羊，我看到了一只老虎”。也很容易设想“如果我是张三，但是是我站在老虎面前”，这种本能的代入能力，实际上是理性思维、抽象思维的起点。
 
 而这种代入能力带来了几个直接后果：
 
@@ -25,21 +23,13 @@
 
 因为这份痛苦是你代入的对象的决策模式里不可排除的绝对关键因素。如果你代入对方却感受不到对方的痛苦，或者甚至感受的不足，你对对方的行为预测就往往是失效的。那么你就将是一个更糟糕的狩猎伙伴和群落成员，你将面临被淘汰的压力。因为不能在有效的级别上识别和淘汰这种成员的群落，自己也要面对额外的竞争压力。
 
-于是就只剩下了一种答案，你的血脉能遗传至今，势必在这种代入能力上要达到某个水准以上。
-
-这实际上是“太平洋岛民/布须曼人受到现代教育可以正常的融入现代生活”的生理基础。
-
-那么这就意味着**人只要拥有足够的智力，就必然会拥有足够的同情能力**。
-
-而这个同情能力，毫无疑问的在最类似于自己的事物——同类——上会格外敏感。
+于是就只剩下了一种答案，你的血脉能遗传至今，势必在这种代入能力上要达到某个水准以上。这实际上是“太平洋岛民/布须曼人受到现代教育可以正常的融入现代生活”的生理基础。那么这就意味着**人只要拥有足够的智力，就必然会拥有足够的同情能力**。而这个同情能力，毫无疑问的在最类似于自己的事物——同类——上会格外敏感。
 
 人类天然的对同类的痛苦有不可抗拒的本能感应。这是人类与其它动物的重大分别。是因为这个原因，原始的人类有比其它动物更强的回避攻击同类的倾向，因为ta们有比其它动物更多的不攻击同类的理由。
 
 这种本能，也是PTSD作为典型的战争创伤必然存在的生理基础。哪怕你杀的是敌人，是十万八千里外你终战之后再也见不到的陌生肤色、陌生文化下的同类，从法律上来讲你完全“有权”、“无责”，甚至受到“这是不可避免的”、“这不是你个人的责任”的安慰，哪怕整个意识形态都站在你这一边，你仍然会感受到强烈的痛苦。
 
-这也是为什么为了保证战斗性，人类常常宣扬敌人的无人性、残暴或者敌人种族的低劣性的缘故——这是要先一步将敌人定义为非同类，以便抑制这种本能。
-
-而即使是人类动用了全部的意识形态工具，包括认知科学的最新成果、心理疗法的最新进展、乃至于药物技术的一切威力，仍然不能真正的解决PTSD问题。
+这也是为什么为了保证战斗性，人类常常宣扬敌人的无人性、残暴或者敌人种族的低劣性的缘故——这是要先一步将敌人定义为非同类，以便抑制这种本能。而即使是人类动用了全部的意识形态工具，包括认知科学的最新成果、心理疗法的最新进展、乃至于药物技术的一切威力，仍然不能真正的解决PTSD问题。
 
 因为它是直接内嵌在人性的本质里、与人的基本理智一体两面的东西。它如果真的被“解决”了，你得到的不会是一个“健康的人”，而只会是一个丧失了基本功能的人。
 
@@ -59,9 +49,7 @@
 
 2）这种能力必然带来原始的宗教。
 
-因为这种代入是泛化的。除了会代入猎物、人类也会很容易代入一座山、一条河，甚至风雨雷电。
-
-更不用说天空和大地。
+因为这种代入是泛化的。除了会代入猎物、人类也会很容易代入一座山、一条河，甚至风雨雷电。更不用说天空和大地。
 
 同样是买一送一，不容挑拣。
 
@@ -125,7 +113,7 @@
 
 人类可以对极其广泛的、超越了直接理性范围的事物上瘾，譬如对闻汽油、嗅胶水上瘾，对特定的形状甚至排列组合上瘾，对各种没有任何显性的有效性的行为上瘾。
 
-这个范围根本不受到“对人类自身有利”的理性法则的约束。甚至可以说——它有强烈的反理性倾向。恰恰是早理性范围内毫无有效性行为，反而有格外强烈的成瘾可能。这也是人类艺术的生理基础。
+这个范围根本不受到“对人类自身有利”的理性法则的约束。甚至可以说——它有强烈的反理性倾向。恰恰是在理性范围内毫无有效性行为，反而有格外强烈的成瘾可能。这也是人类艺术的生理基础。
 
 这就是人类的“易成瘾性”。
 
