--- a/待归档/亚里士多德.md
+++ b/待归档/亚里士多德.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-10-25]
 > Link:
 > Category: #【答集】/04-社科答集 
-> Tag:
+> Tag: #2-事业/2A-功夫/2-拓展能力/哲学 #4-世界史/4D-历史 
 > 评论区:
 > 泛讨论:
 
