--- a/待归档/人财倍出.md
+++ b/待归档/人财倍出.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2023-11-08]
 > Link:
 > Category: #【答集】/01-家族答集 
-> Tag:
+> Tag: #1-家族/1A-内外/1-内在建设/1a-三观 #1-家族/1E-两性/1-亲密关系/1b-交往案例/恋爱 
 > 评论区:
 > 泛讨论:
 
