--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/160 - 形而上学总论/论学习/求学.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/160 - 形而上学总论/论学习/求学.md
@@ -2,7 +2,7 @@
 [如何让别人心甘情愿地把他所学的教给我？](https://www.zhihu.com/question/38714506/answer/1768191207)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-05-10]
+> Last update: [编辑于 2023-11-22]
 > Link: [[学习的快乐]] [[教教我]] [[执行力]] [[做计划]] [[有困难就说]] [[祷告观]] [[财富观]] [[奢侈品]] [[能力]] [[学好语文]] [[学好会计]] [[尊师]] [[尊重]] [[征求建议]] [[受欢迎]] [[有修养]] [[道德]]
 > Category: #【答集】/01-家族答集
 > Tag: #6-其它/万赞回答 #2-事业/2C-职业/1-态度与伦理 #1-家族/1B-处世/2-外务/2c-求学求知 #1-家族/1F-亲子/1-身为父母
@@ -15,7 +15,7 @@
 
 **给你布置作业，就是对你有所承诺**，承诺了你做好作业会有下一步的审阅和反馈。
 
-**给你布置作业，就是对你花了心血**。因为布置作业需要时间，还需要安排看作业、改作业、评作业和继续下一节的时间。
+**给你布置作业，就是对你花了心血。**因为布置作业需要时间，还需要安排看作业、改作业、评作业和继续下一节的时间。
 
 “等额完成”，意思是时间、数量、质量刚好达标，表示你只是**足够礼貌**。那么你就要看你是否有足够的运气，能搭上其他足够好的同学的顺风车。
 
@@ -45,6 +45,8 @@
 
 **作业只能让人惊喜，不容让人失望——尤其是不容让自己失望。**
 
+--------------------
+
 再做点补充吧。
 
 说白了，真正的秘诀是——**想办法使得教你成为一种享受。**
@@ -56,6 +58,7 @@
 1）要尊师。尊师是一件非常复杂的事情，它的理由、技术细节本身是一个需要专门讨论的问题。
 
 [我出钱你出力，为什么学生就得更尊敬老师？](https://www.zhihu.com/question/333195546/answer/770295864)
+
 2）学以致用。
 
 学以致用分为两个层面。
