--- a/【文章目录】/【4 - 应用科学】/490 - 商学/494 - 企业管理/高管写代码.md
+++ b/【文章目录】/【4 - 应用科学】/490 - 商学/494 - 企业管理/高管写代码.md
@@ -2,7 +2,7 @@
 [为什么国内 IT 公司 leader 以上就不怎么写代码，而据说 Google 的 Jeff Dean 还写代码？到底哪种情况好呢？](https://www.zhihu.com/question/23321862/answer/1998413362)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-07-14]
+> Last update: [编辑于 2023-11-21]
 > Link: [[自弃]] [[责任感]] [[能力与责任]]
 > Category: #【答集】/02-企管答集
 > Tag: #2-事业/2D-企管/1-管理者素质
@@ -25,7 +25,7 @@
 
 老子不看ppt。
 
-**想做到做不到那叫退而求其次，做得到不去做这叫自误。**
+想做到做不到那叫退而求其次，做得到不去做这叫自误。
 
 一个真正伟大的开发项目在实质上只能是写核心代码的人主导的。其它“职位更高”的“领导者”只不过是高级服务员。
 
