--- a/待归档/不两立.md
+++ b/待归档/不两立.md
@@ -4,8 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-11-19]
 > Link:
-> Category: 
-> Tag: [企管, 最近更新, 人与智能]
+> Category: #【答集】/02-企管答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
