--- a/待归档/家祭无忘告乃翁.md
+++ b/待归档/家祭无忘告乃翁.md
@@ -4,8 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-11-16]
 > Link:
-> Category: 
-> Tag: [社科, 最近更新]
+> Category: #【答集】/08-文艺答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
