--- a/待归档/惊奇队长2.md
+++ b/待归档/惊奇队长2.md
@@ -4,8 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-11-13]
 > Link:
-> Category: 
-> Tag: [最近更新]
+> Category: #【答集】/08-文艺答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
