--- a/待归档/耿耿.md
+++ b/待归档/耿耿.md
@@ -4,8 +4,8 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-11-13]
 > Link:
-> Category: 
-> Tag: [处世, 最近更新]
+> Category: #【答集】/01-家族答集 
+> Tag:
 > 评论区:
 > 泛讨论:
 
