--- a/【文章目录】/【2 - 信仰类】/神学答集/科学的尽头.md
+++ b/【文章目录】/【2 - 信仰类】/神学答集/科学的尽头.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: *26/07/2021*
-> Link: [[科学哲学]] [[科学教]] [[作为信仰的科学]]
+> Link:  [[科学教]] [[作为信仰的科学]]
 > Category: #【答集】/09-神学答集
 > Tag: #3-信仰/3D-神学 #4-世界史/4E-科学技术/1-科学 #2-事业/2A-功夫/1-核心能力/学逻辑
 > 评论区:
