--- a/【文章目录】/【3 - 自然科学】/300 - 科学总论/论科学/科学信仰.md
+++ b/【文章目录】/【3 - 自然科学】/300 - 科学总论/论科学/科学信仰.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-16]
-> Link: [[可信]] [[可信标准]] [[作为信仰的科学]] [[科学的尽头]] [[科学教]] [[科学不正确]] [[科学哲学]]
+> Link: [[可信]] [[可信标准]] [[作为信仰的科学]] [[科学的尽头]] [[科学教]] [[科学不正确]]
 > Category: #【答集】/09-神学答集
 > Tag: #3-信仰/3B-信与疑
 > 评论区:
