--- a/【文章目录】/【5 - 社会科学】/570 - 政治/575 - 地方制度 & 自治/台湾/以武促统.md
+++ b/【文章目录】/【5 - 社会科学】/570 - 政治/575 - 地方制度 & 自治/台湾/以武促统.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-25]
-> Link: [[真正目的]] [[武力和统]] [[言之不预]]
+> Link: [[真正目的]] [[武力和统]]
 > Category: #【答集】/04-社科答集
 > Tag: #4-世界史/4C-军事
 > 评论区: [[评论区_以武促统]]
