--- a/【文章目录】/【7 - 世界史地】/750 - 美洲史地/752 - 美国/帝国陷阱.md
+++ b/【文章目录】/【7 - 世界史地】/750 - 美洲史地/752 - 美国/帝国陷阱.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-16]
-> Link: [[所谓大战略家]] [[帝国病]] [[差距]] [[制造业灵魂]] [[由海向陆]] [[言之不预]] [[武力和统]]
+> Link: [[所谓大战略家]] [[帝国病]] [[差距]] [[制造业灵魂]] [[由海向陆]] [[武力和统]]
 > Category: #【答集】/04-社科答集
 > Tag: #4-世界史/4B-政治
 > 评论区:
