--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/价值观/肘后千金.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/165 - 价值论/价值观/肘后千金.md
@@ -2,7 +2,7 @@
 [按时下班被领导阴阳「这么早就走呀」，我该怎么回应？](https://www.zhihu.com/question/617196411/answer/3168071284)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-08-16]
+> Last update: [编辑于 2023-12-17]
 > Link:
 > Category: #【答集】/01-家族答集 #【答集】/02-企管答集 
 > Tag: #1-家族/1A-内外/1-内在建设/1a-三观 #2-事业/2A-功夫/1-核心能力/学会计 #2-事业/2C-职业/1-态度与伦理
@@ -17,7 +17,7 @@
 
 第一，这是在强烈的暗示“这个本子上有的我就不怕了，但是这个本子上没有的还能要我的命”。——你看看你那小袖筒子，你这小册子这开本、这厚度，是本子上写了的多，还是没写的多？
 
-没写的那些岂不要成为黑暗中的克鲁苏，不得吓死你？
+没写的那些岂不要成为黑暗中的克苏鲁，不得吓死你？
 
 第二，这是在暗示本子上写了的我就要记住，记不住可要误事。没写的我不知道倒霉也就罢了，写都写了到时候没记住，眼睛闭得上吗？
 
@@ -48,6 +48,8 @@
 这种后果是战略性的，而且是传染性的、遗传性的，不要作死。
 
 这三条你守住，那么没有千金方你也不会有大问题——但这不是说千金方没有用处，用处当然有，这是说“千金方就是唯一防线，退后一步就是万丈深渊”的问题会得到最大限度的解决。千金方你抓到固好，抓不到你也不会完蛋，不需要捶胸顿足的对“我当时”耿耿于怀，念念不忘。
+
+  
 
 最后，也是最方便的一条，就是盯着我的更新看。这不是做广告，而是我的确是现在最好的信源之一。
 
