--- a/【文章目录】/【1 - 哲学类】/180 - 美学/186 - 审美判断/倾国倾城.md
+++ b/【文章目录】/【1 - 哲学类】/180 - 美学/186 - 审美判断/倾国倾城.md
@@ -1,8 +1,8 @@
-# 美人计
+# 倾国倾城
 [我认为美人计纯属虚构，因为那些人根本不缺美人，怎么可能中美人计呢？](https://www.zhihu.com/question/538192516/answer/2557078198)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2022-07-04]
+> Last update: [编辑于 2023-12-24]
 > Link: [[美人]]
 > Category: #【答集】/07-军事技术与艺术
 > Tag: #4-世界史/4C-军事
@@ -26,3 +26,4 @@
 那些觉得“不就是长得漂亮点吗，我就不信我扛不住“的最容易完蛋，抗性往往最差。
 
 总之，不要这么傲慢和铁齿。
+
