--- a/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/两条道路.md
+++ b/【文章目录】/【5 - 社会科学】/520 - 教育/家庭教育/两条道路.md
@@ -2,7 +2,7 @@
 [《胡鑫宇请给心理指导师五分钟》一文为什么引起了争议？对青少年更好的心理指导应该是怎样的？](https://www.zhihu.com/question/582102554/answer/2877338485)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-02-06]
+> Last update: [编辑于 2023-12-30]
 > Link:
 > Category: #【答集】/01-家族答集
 > Tag: #1-家族/1F-亲子/1-身为父母
@@ -17,7 +17,9 @@
 
 你要获得奇迹般地影响力，始终记得这两句话就行了。
 
-### 青少年们不是缺待指出的错误，而是缺谦卑的人。
+  
+
+### 青少年们不是缺待指出的错误，而是缺谦卑的指错人。
 
 ### **ta们之所以想自杀，不是因为ta们找不到自己的错误，而是ta们在身边已经找不到谦卑的人。**
 
@@ -57,6 +59,8 @@
 
 子女一旦感到自己离这个标准的差距已经不再是自己的资源所能企及的，当然要陷入绝望。
 
+  
+
 3）子女对父母的生存现状的不满意。
 
 作为你所自称达到了这个标准的典范，你自己的生活水平、家庭地位、社会地位如果不被子女认可，就会出现“就算努力达到了，也就是能过这样一种可怜的生活”的绝望。
@@ -69,6 +73,10 @@
 
 到了这一步，这样想有什么错？
 
+  
+
+  
+
 这三重绝望同时发作，只要父母不醒悟、不弃绝由这种虚假的偶像感带来的快感、不忏悔，只要出现在子女面前，就等于三个魔鬼同时现身。
 
 再说一遍——**自造偶像，这三个后果是不可避免的**。
@@ -76,6 +84,8 @@
 缺少谦卑的人来作为世界宽容的见证，是这种绝望的根源。
 
 这显然不能通过另一个傲慢的人展示十足的信心来解决。所以这封信是没什么用的。
+
+  
 
 问题是，父母们为什么不愿意做这个谦卑的人，来做世界宽容的见证呢？
 
@@ -94,6 +104,8 @@
 不是吗？
 
 你投入了这个资源吗？
+
+  
 
 如果你不知道从哪里开始，那么先把这东西看完：
 
