--- a/【文章目录】/【5 - 社会科学】/520 - 教育/社会教育/志愿教育.md
+++ b/【文章目录】/【5 - 社会科学】/520 - 教育/社会教育/志愿教育.md
@@ -1,8 +1,8 @@
-# 义教
+# 志愿教育
 [义教给小朋友教点什么东西适合？](https://www.zhihu.com/question/314630994/answer/1930566928)
 
 > Author: #0-Anonymity
-> Last update: [发布于 2021-06-09]
+> Last update: [发布于 2023-12-31]
 > Link: [[尊师]]
 > Category: #【答集】/01-家族答集
 > Tag: #4-世界史/4A-社科/教育 #1-家族/1F-亲子/1-身为父母 #2-事业/2C-职业/3-职业分析
