--- a/【文章目录】/【5 - 社会科学】/580 - 法律/580 - 法律总论/废死.md
+++ b/【文章目录】/【5 - 社会科学】/580 - 法律/580 - 法律总论/废死.md
@@ -2,7 +2,7 @@
 [为什么要废除死刑呢？](https://www.zhihu.com/question/20023973/answer/651499343)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-05-16]
+> Last update: [编辑于 2023-12-15]
 > Link: [[道德与伦理]] [[道德]] [[真正的恶]] [[残忍]] [[活死人 1]] [[活死人 2]] [[爱]]
 > Category: #【答集】/04-社科答集
 > Tag: #4-世界史/4A-社科/伦理
@@ -23,9 +23,9 @@
 
 血债累累的流窜连环杀人犯，该不该杀？占山为王的拦路抢劫杀人犯，该不该杀？
 
-**“当然该杀呀！这要是都不杀，那还要法律干什么呀！说不该杀的，让他们杀几个你的家人，看你想不想杀他们？”**
+“当然该杀呀！这要是都不杀，那还要法律干什么呀！说不该杀的，让他们杀几个你的家人，看你想不想杀他们？”
 
-**被他们抢的，觉得他们该杀；上头也觉得该杀；害怕他们有一天杀到自己头上的，也觉得他们该杀；连他们自己，杀多了人，也在内心深处觉得自己该杀。**
+被他们抢的，觉得他们该杀；上头也觉得该杀；害怕他们有一天杀到自己头上的，也觉得他们该杀；连他们自己，杀多了人，也在内心深处觉得自己该杀。
 
 然后我们派出官军，依法处决掉他们。
 
@@ -37,7 +37,7 @@
 
 秀才免征？国家法度啊，鼓励教育啊。
 
-官员免征？官员俸禄来自转移支付，来自税收收入本身，反复征收岂不是有神经病？
+官员免征？官员俸禄来自[转移支付](https://www.zhihu.com/search?q=%E8%BD%AC%E7%A7%BB%E6%94%AF%E4%BB%98&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A651499343%7D)，来自税收收入本身，反复征收岂不是有神经病？
 
 地主加租？私有财产，你租不起可以不租啊，凭什么人家不能加？
 
@@ -73,15 +73,15 @@
 
 你结成“义军”所屠杀的富人的资产，现在已经变成了无主之物，显然应该收入公库。
 
-转完一大圈，无意之中形成了一个无懈可击的“绞肉机解决方案”，你们看见没有？
+转完一大圈，无意之中形成了一个无懈可击的“[绞肉机](https://www.zhihu.com/search?q=%E7%BB%9E%E8%82%89%E6%9C%BA&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A651499343%7D)解决方案”，你们看见没有？
 
-我们不需要对任何社会问题作出任何努力，只需要“合理的设计”，自然而然会排挤出一批人来用生命替这些问题买单。整个路径上没有任何人“有罪”，**有罪的永远是那些没有条件继续击鼓传花的人们**。除了这最后一棒的倒霉鬼们之外，所有的人都只是在实行合法的自由啊！
+我们不需要对任何社会问题作出任何努力，只需要“合理的设计”，自然而然会排挤出一批人来用生命替这些问题买单。整个路径上没有任何人“有罪”，**有罪的永远是那些没有条件继续[击鼓传花](https://www.zhihu.com/search?q=%E5%87%BB%E9%BC%93%E4%BC%A0%E8%8A%B1&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A651499343%7D)的人们**。除了这最后一棒的倒霉鬼们之外，所有的人都只是在实行合法的自由啊！
 
 **这真的是合法的自由，不是开玩笑，不带一点讽刺，确确实实是每一个合法公民有权做出的合法的选择。**
 
-**但是我们所有人的合法选择，会自然而然的将压力传给一群没条件像我们这样做的人**，把他们撞倒在我们的车前，碾压在我们的履带下，背负着我们的仇恨，成为我们在凛冬里欣然焚烧的薪柴。
+**但是我们所有人的合法选择，会自然而然的将压力传给一群没条件像我们这样做的人，**把他们撞倒在我们的车前，碾压在我们的履带下，背负着我们的仇恨，成为我们在凛冬里欣然焚烧的薪柴。
 
-真的，按照法律，“李自成”们杀光就好了。“陈胜吴广”们，都是不折不扣的违法犯罪分子，绝对的按律当斩啊。秦律残暴又如何？凭什么“大秦”的良民们要去降低诛杀的门槛去放纵那些罪囚？失期就当斩，这是明文的法律不是吗？你不但不服从法律，你还进一步烧杀掳掠，你难道还不是当斩又当斩？
+真的，按照法律，“[李自成](https://www.zhihu.com/search?q=%E6%9D%8E%E8%87%AA%E6%88%90&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A651499343%7D)”们杀光就好了。“陈胜吴广”们，都是不折不扣的违法犯罪分子，绝对的按律当斩啊。秦律残暴又如何？凭什么“大秦”的良民们要去降低诛杀的门槛去放纵那些罪囚？失期就当斩，这是明文的法律不是吗？你不但不服从法律，你还进一步[烧杀掳掠](https://www.zhihu.com/search?q=%E7%83%A7%E6%9D%80%E6%8E%B3%E6%8E%A0&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A651499343%7D)，你难道还不是当斩又当斩？
 
 “大秦”的“错误”，仅仅只是错估了自己的军事动员能力，不小心把处决的线设得太高了，以至于“按律当杀的恶贼”的数量不小心超过了良民们，所以才覆灭。
 
