--- a/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论安全/救助他人/爱不生债.md
+++ b/【文章目录】/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论安全/救助他人/爱不生债.md
@@ -2,7 +2,7 @@
 [我的心理咨询师主动给我降价并支付不起费用的时候让我先欠着，这样靠谱吗?](https://www.zhihu.com/question/598742389/answer/3081469746)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-06-20]
+> Last update: [编辑于 2023-12-17]
 > Link:
 > Category: #【答集】/01-家族答集 #【答集】/04-社科答集 #【答集】/05-科学答集 
 > Tag: #1-家族/1C-安全/2-救助ta人 #3-信仰/3A-Caritas/2-慈善 #2-事业/2B-投资
@@ -35,7 +35,9 @@
 
 那么ta所做的并不能全然称为善与尽义，而有无视人与己的平安，沉迷名为“慈善”的享乐之嫌。
 
-### 慈善如无纪律，一样是一种毒瘾。 ###
+### 慈善如无纪律，一样是一种毒瘾。
+
+  
 
 同样的纪律，一直在指导这些答案本身的撰写。
 
@@ -43,9 +45,9 @@
 
 我当然捐了，但我捐的额度，实际上被视为我自己愿意在这种令我自己觉得值得一做的事情上的必要成本。我的享乐令你们额外受益，不对你们产生补偿的义务。
 
-这也意味着你们不要出于“感谢”来“回馈”，更不要把你们所“打赏”的金额视为对这些“精彩表演”的“赏赐”。
+**这也意味着你们不要出于“感谢”来“回馈”，更不要把你们所“打赏”的金额视为对这些“精彩表演”的“赏赐”。**
 
-不，这些“打赏”是将来其他人得以更多更好的得到这些服务的预付成本。
+**不，这些“打赏”是将来其他人得以更多更好的得到这些服务的预付成本。**
 
 正是为了那些自己没有能力支付、而我也无力代付的人，可以不必抱着亏欠的心情来仰望所谓“伟大的爱”。是为了ta们可以像现在的你们一样，一面得到实质的帮助，一面不必负债、不必亏欠、不必忐忑。
 
