--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论分手/分手条件.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论分手/分手条件.md
@@ -2,14 +2,14 @@
 [什么时候该分手？](https://www.zhihu.com/question/23693381/answer/2859180452)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-01-25]
+> Last update: [编辑于 2023-12-29]
 > Link:
 > Category: #【答集】/03-第一性
 > Tag: #1-家族/1E-两性/1-亲密关系/1b-交往案例/分手 #1-家族/1E-两性/1-亲密关系/1a-交往准则/社交红线
 > 评论区:
 > 泛讨论:
 
-当你的恋栈不去是对方继续一种**既损害可持续性**、也**不产生你所认同的社会价值**的行为模式的**主要依赖**甚至**动力来源**的时候，你**有义务**分手。
+当你的恋栈不去是对方继续一种**既损害其自身的可持续性**、也**不产生你所认同的社会价值**的行为模式的**主要支持**的时候，你**有义务**分手。
 
 在这个情势下，这个亲密关系的本质已经转化为了一种过量注射的“海洛因处决”，一种将对方的生命价值当作娱乐耗材的自私。
 
@@ -42,5 +42,7 @@
 天怒，则人怨。
 
 后果之严重，非你想象所能及。
+
+  
 
 以上就是正确答案，记明白。
