--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原理/主动的被动.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/亲密关系/论恋爱/原理/主动的被动.md
@@ -2,7 +2,7 @@
 [爱是主动，这个观点对吗？](https://www.zhihu.com/question/29139583/answer/2206995808)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-11-08]
+> Last update: [编辑于 2023-12-27]
 > Link: [[爱]] [[恩]] [[恋爱原理]] [[温柔]] [[但行好事]] [[可爱]] [[值得一嫁]] [[亲子冲突]] [[不抱怨]] [[运气]]
 > Category: #【答集】/01-家族答集
 > Tag: #1-家族/1E-两性/1-亲密关系/1a-交往准则/贪与爱 #3-信仰/3A-Caritas/1-爱 #1-家族/1E-两性/1-亲密关系/1a-交往准则/社交红线 #5-专题合集/合集1-概念与定义
@@ -15,11 +15,11 @@
 
 ta的全部行动准则都要严守这条红线——
 
-**它永远竭尽全力保留对方的不知情权、不参与权、不接受权、不赞赏权、不回报权。**
-
-**不惜被埋没、被误解、被遗忘、被辜负乃至被伤害，也不追求自己的益处。**
+**它永远竭尽全力保留对方的不知情权、不参与权、不接受权、不赞赏权、不回报权，不惜被埋没、被误解、被遗忘、被辜负乃至被伤害，也不追求自己的益处。**
 
 它是一种主动作为的被动。
+
+  
 
 这话听起来很复杂，举一点实际例子。
 
@@ -35,45 +35,43 @@ ta的全部行动准则都要严守这条红线——
 
 你越向这个方向进发，你越是接近于爱。
 
+  
+
 问题来了，为什么要如此强调“保持被动”？
 
 因为**爱不是一种权力**（power）。
 
 **主动的对别人做任何事——包括你自认为有帮助的事——都首先是一种侵犯，然后才有其中的一部分因为碰巧压中宝，被人认为是好事。**
 
-看清楚，**侵犯是第一性的，被算为好是第二性的**。
-
-它只是有一定概率会被人宽容，原谅。
+看清楚，**侵犯是第一性的是必然的，被算为好是第二性的，是不必然的。**它只是有一定概率会被人宽容，原谅。
 
 而有爱的人毫无疑问的会看到一个简单的事实——你没有权利强迫别人加入你的赌局。
 
-任何一个人，仅仅凭着“自信有一定概率能让你受益”就径直开设赌局，并且把**你的命运**不由分说的夺过来下注，你觉得这是爱吗？
+一个人仅仅凭着“自信有一定概率能让你受益”就径直开设赌局，并且把**你的命运**不由分说的夺过来下注，你觉得这是爱吗？
 
 **如果这就是爱，那么一切对人的侵犯和干涉就只需要加上这种“自信”就可以彻底正当化。**
 
-**魔鬼和天使有何区别？**
+**此时魔鬼和天使有何区别？肯不肯为不伤人而自愿戴上这“枷锁”，就是这区别。**
 
-**肯不肯为不伤人而自愿戴上这“枷锁”，就是这区别。**
+  
 
 爱是尽最大的主动，去做尽可能被动的事。
 
+  
+
 举个经典的例子——如果你要讲什么道理，放在别人会去寻找答案的地方，等别人需要这答案时来寻找。
 
-不要自己擅自觉得对方有这个问题，“需要这个答案”，凭着对方躲不开与你的对话流，强行放进对方不得不看到的地方。
+不要自己擅自觉得对方有这个问题，“需要这个答案”，凭着对方躲不开与你的对话流，强行放进对方不得不看到的地方——比如直接发到对方的对话框里、私信里，比如把人堵在房间里、饭桌上。
 
-**“出于善意”，并不表示这不是一种冒犯。**
+**“出于善意”，并不表示这不是一种冒犯。**这样的规则近于残酷，但还是那句话——如果去掉这枷锁，那么你和恶魔有何区别？难道恶魔就不会说“我是为你好”吗？
 
-这样的规则近于残酷，但还是那句话——如果去掉这枷锁，那么你和恶魔有何区别？
+  
 
-难道恶魔就不会说“我是为你好”吗？
-
-被动的问题，是由大量的“眼看着危险，只能干着急”，有很多理论上“主动一点”就可以免除的对方的“灾难和痛苦”。
+被动的问题，是大量的“眼看着危险，只能干着急”，有很多理论上“主动一点”就可以免除的对方的“灾难和痛苦”。
 
 但是，提醒你一下——你一但自行解除这限制，将没有任何有效的的论证可以证明因你的干涉而起的痛苦和折磨会小于你所“避免”掉的“痛苦和折磨”。
 
-对方会不会遭受你以为会发生的那个痛苦，不好说，但是你侵犯了对方的自主权这一点是板上钉钉确定无疑的。
-
-而且，只要你一认定这个“主动逻辑”，你对人的干涉就再也没有逻辑有效的休止符。
+对方会不会遭受你以为会发生的那个痛苦，不好说，但是你侵犯了对方的自主权这一点是板上钉钉确定无疑的。而且，只要你一认定这个“主动逻辑”，你对人的干涉就再也没有逻辑有效的休止符。
 
 它在你想实施的一切干涉情境下，全部有效。
 
@@ -81,11 +79,11 @@ ta的全部行动准则都要严守这条红线——
 
 那只是换汤不换药。
 
-一切你想横加干预的情形，都会自动成为“非常有必要合理干预”的情形。
-
-而背后深刻的动机，终究不过是“不甘心没回报”这几个字而已。
+一切你想横加干预的情形，都会自动成为“非常有必要合理干预”的情形。而背后深刻的动机，终究不过是“不甘心没回报”这几个字而已。
 
 一言以蔽之——**贪**。
+
+  
 
 爱想要不演变成一种他人的灾难，唯一的选择就是严守被动。
 
