--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/195 - 社会伦理/必要过程.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/195 - 社会伦理/必要过程.md
@@ -2,18 +2,14 @@
 [怎样处理生活中的小的偷窃行为？要给予偷窃者惩罚吗？怎样的惩罚算作合适？](https://www.zhihu.com/question/560150529/answer/2720990585)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-05-22]
+> Last update: [编辑于 2024-01-12]
 > Link: [[司法公正]]
 > Category: #【答集】/04-社科答集
 > Tag: #4-世界史/4A-社科
 > 评论区:
 > 泛讨论:
 
-小朋友们有一个误解，就是认为司法体系并不是定罪过程中绝对必要的一部分，只是在没有人确切的知道真相的前提下的一种补救。
-
-如果有一个人——尤其是当这个人就是“我”——亲眼目睹/了解了“真相”，就没有必要再经过司法过程，可以直接和群众商量要怎么处理确定无疑的罪恶了。
-
-剩下的主要问题，仅仅只是要怎么量刑，判决怎么实施。
+小朋友们有一个误解，就是认为司法体系并不是定罪过程中绝对必要的一部分，只是在没有人确切的知道真相的前提下的一种补救。如果有一个人——尤其是当这个人就是“我”——亲眼目睹/了解了“真相”，就没有必要再经过司法过程，可以直接和群众商量要怎么处理确定无疑的罪恶了。剩下的主要问题，仅仅只是要怎么量刑，判决怎么实施。
 
 “我”都亲眼看到了，亲身见证了呀，“事情明明就是这样的”。
 
@@ -21,7 +17,7 @@
 
 **就算你亲眼看到对方杀了一个人，在经过证据提交、法庭审理之前，你都不能认定对方有什么罪。**
 
-## 因为公平的审判是每个人的不可剥夺的当然的权利。没有人——包括自认为亲眼见证了罪行的人——有权力单方面给任何其他人定罪。 ##
+## 因为公平的审判是每个人的不可剥夺的当然的权利。没有人——包括自认为亲眼见证了罪行的人——有权力单方面给任何其他人定罪。
 
 这是公民社会的基础。
 
@@ -71,9 +67,13 @@
 
 **主张和实践私意定罪，在社会危害性上性质上比杀人、盗窃犯根本得多、严重得多。**
 
+  
+
 这一点意识，因为我们仍然处在公民社会转型为完成的阶段，教育普及程度远远不足。
 
 你如果明白，你就比人占了先机。你如果教会你的子女明白，让ta们养成避定罪如避蛇蝎的敏感意识，ta们将世世代代的在公民社会中受益。
+
+  
 
 养成这个意识，对个人前途有很大的影响。
 
@@ -105,6 +105,8 @@
 
 题主现在这种行为，犯了大忌，运气不好撞在枪口上，个人前途可能受到重大挫折——很容易因为自己觉得“这有什么”的“芝麻小事”，被取消录取资格或者辞退开除，甚至惹上官司还败诉。
 
+  
+
 所以，绝对不要在仅仅自己觉得见到了某种罪行、还没有经过司法系统的程序之前就自己定出什么罪名，更绝对不能随便对外宣扬这个判定。
 
 **司法过程对于定罪是一个绝对不可省略的过程。**
@@ -113,6 +115,8 @@
 
 **省略了，你自己会成为首要打击对象。**
 
+  
+
 现在问题来了，在“我个人见证了事实，但司法尚未介入定性”的阶段，对个人而言明智的选择是什么？
 
 你如果觉得要作为公民处置犯罪，那么你可以想办法采集证据，正常举报。一切照规矩来。
@@ -120,6 +124,8 @@
 怎么能有效采集和固定证据，这个你去咨询律师或者刑侦专业人员。
 
 **没判下来之前什么蠢话也不要讲。**
+
+  
 
 如果你觉得这个成本太高——这个成本的确高得超出一般人预期——那么你唯一能选的策略就是**当成误会处理**。
 
@@ -142,5 +148,7 @@
 到时候你别哭天喊地，抱怨这成本好高，为什么世界不相信你。
 
 要做任何事都要专业和周密，包括主持正义——**尤其是主持正义。**
+
+  
 
 这是这个世界的客观规则，停止抱怨，deal with it.
