--- a/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/态度与伦理/错上错.md
+++ b/【文章目录】/【1 - 哲学类】/190 - 伦理学/198 - 职业伦理/态度与伦理/错上错.md
@@ -1,8 +1,8 @@
-# 失信之罪
+# 错上错
 [如何应对上级的批评？](https://www.zhihu.com/question/626919122/answer/3258218446)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-10-21]
+> Last update: [编辑于 2024-01-13]
 > Link:
 > Category: #【答集】/02-企管答集 
 > Tag: #2-事业/2C-职业/1-态度与伦理 
@@ -25,7 +25,7 @@
 
 承诺没做到还不道歉，就是在嘲弄和欺凌托付你的人。“认为没有错”，就是认为自己有这个权利可以嘲弄和欺凌对方。
 
-而最糟糕的是，这往往都是在凌辱自己凌辱不起的上位者 —— 分配任务、接受承诺的一般都是地位较高、权柄较大的一方。
+而最糟糕的是，这往往都是在凌辱自己凌辱不起的上位者—— 分配任务、接受承诺的一般都是地位较高、权柄较大的一方。
 
 **这种错误在你学生阶段就犯了，被人鲜血淋漓指出来了，自己刻骨铭心记住了，远远好过将来进了某家你舍不得放弃的名企、机构，然后在那些地方犯这种浑被人直接内定坐五年十年冷板凳要强。**
 
