--- a/【文章目录】/【5 - 社会科学】/550 - 经济/553 - 生产 & 企业 &经济政策/计划经济.md
+++ b/【文章目录】/【5 - 社会科学】/550 - 经济/553 - 生产 & 企业 &经济政策/计划经济.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-05-19]
-> Link: [[苏联笑话]] [[注目事实]]
+> Link: [[苏联笑话]] [[注目事实 1]]
 > Category: #【答集】/04-社科答集
 > Tag: #4-世界史/4A-社科 #4-世界史/4D-历史 
 > 评论区:
