--- a/【文章目录】/【5 - 社会科学】/570 - 政治/570 - 政治学总论/上策.md
+++ b/【文章目录】/【5 - 社会科学】/570 - 政治/570 - 政治学总论/上策.md
@@ -2,7 +2,7 @@
 [古代谋士为什么有上中下三策，而君主却不选上策?](https://www.zhihu.com/question/441374666/answer/1728261790)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-05-15]
+> Last update: [编辑于 2024-01-13]
 > Link: [[权谋套娃]] [[理想]] [[理想的能力]] [[劝退]] [[礼敬]]
 > Category: #【答集】/01-家族答集
 > Tag: #4-世界史/4D-历史 #4-世界史/4C-军事
@@ -15,7 +15,7 @@
 
 其实所谓的“上策”的一般性机制很简单——扩大对策需要的时间资源项，从而使得谋略可以指向底层的、根本的、必然的要素，而不是指向表层的、即刻的、机会性的矛盾。
 
-允许你用三年的时间，来从根上解决问题，而不是三天时间从事务层面表象的应付危机，前者自然而然的给了你更多的策略工具的选择空间，也自然而然可以让你在丰富得多的多种路线理选择综合最优的的方案。
+允许你用三年的时间，来从根上解决问题，而不是三天时间从事务层面表象的应付危机，前者自然而然的给了你更多的策略工具的选择空间，也自然而然可以让你在宽广得多的路线池里选择综合最优的的方案。
 
 而如果限定你在三天内出效果，你就会发现各种物理的、实在的约束实际上决定了你只能在极小的范围内选择。而这个范围内所有的选择在综合效应和长远利益上来说都是不可能和那些手段丰富的得多的长期策略相比的。
 
@@ -32,6 +32,8 @@
 需要这种虽九死其犹未悔的信仰，才能在将忧臣疑的时候坚定的维持住继续推进正确的行动，才能真正的、最快的把正面效应发挥出来，逐渐压倒负面的怀疑，挺过最黑暗的时期。
 
 而如果对共同信仰的信心不足，犹豫、徘徊，只会将本来可以奏效的策略执行成果然没有效果，从而自我实现“果然无效”的预言。
+
+  
 
 坦白说，臣下建言分上中下三策，本身是对君主一种不自觉的试探。
 
@@ -101,6 +103,10 @@
 
 你不必担心你受不起，我反而要感谢你。
 
+  
+
+---
+
 中策之中，有群臣可以接受的妥协。选中策，证明你被效忠的资格任然有效。虽然不够理想，但是谁如果这样就背弃你，ta有失人臣之道。
 
 下策往往完全脱离了臣的理想原则。是纯粹从“最大获利、最大幸存机会”而出的策略。允许摆脱这一切道德原则的束缚，就像允许拉长应对的时间资源一样，会带来“额外的策略空间”。
@@ -120,6 +126,8 @@
 正因为危难当前，我尤其要清清楚楚的知道你还有没有资格让我奉你的名受累、冒险、蒙冤。
 
 选下策，君则不君，臣亦可不臣了。
+
+---
 
 为什么说“这不只是古代君主的问题”？
 
