--- a/【文章目录】/【3 - 自然科学】/390 - 人类学/厌倦.md
+++ b/【文章目录】/【3 - 自然科学】/390 - 人类学/厌倦.md
@@ -2,7 +2,7 @@
 [为什么人类天天吃同样的东西很快会腻，但是动物比如说牛天天吃草却从不会腻？](https://www.zhihu.com/question/492888437/answer/2196379477)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-11-19]
+> Last update: [编辑于 2024-01-23]
 > Link: [[自然法]] [[世界史]] [[爱]] [[长时间保持理性]] [[理性的爱]] [[理性的代价]] [[以弱悯强]] [[同情的资格]] [[孰强孰弱]] [[痛苦根源]] [[对人类失望]] [[Sin]] [[天赋 1]] [[良知]] [[人吃人]] [[己所不欲勿施于人]] [[可怜者可恨]]
 > Category: #【答集】/05-科学答集
 > Tag: #4-世界史/4D-历史 #4-世界史/4E-科学技术/1-科学
@@ -13,7 +13,7 @@
 
 易代入，是指人类拥有将自己代入其它事物的本能能力。
 
-人类很容易设想“假如我是一只老虎，我看到了一只羊”，或者“假如我是一只羊，我看到了一只老虎”。也很容易设想“如果我是张三，但是是我站在老虎面前”，这种本能的代入能力，实际上是理性思维、抽象思维的起点。
+人类很容易设想“假如我是一只老虎，我看到了一只羊”，或者“假如我是一只羊，我看到了一只老虎”。也很容易设想“如果我是张三，我站在老虎面前”，这种本能的代入能力，实际上是理性思维、抽象思维的起点。
 
 而这种代入能力带来了几个直接后果：
 
@@ -55,6 +55,8 @@
 
 不过这个与本题距离略远，就此打住。
 
+  
+
 我们回到刚才得到的这个基本起点上来——人类有因为理性能力而同时获得的强迫性的避免攻击同类和类同类的本能，这意味着什么呢？
 
 这意味着这个：
@@ -72,6 +74,8 @@
 如果人类的确只能吃这种果子，确实没有任何别的选择，日复一日更加显著的饥饿迟早会压倒这种抑制效应，促使人类仍然走上消灭同类的老路。
 
 人类只是阈值高出一大截，但这阈值并没有高到一切困境都不足以越过。
+
+  
 
 到这里，就出现了“易厌倦”和“易成瘾”的关键意义了。
 
