--- a/待归档/富贵险.md
+++ b/待归档/富贵险.md
@@ -2,7 +2,7 @@
 [很多私企老板破产了为什么要选择自杀呢？](https://www.zhihu.com/question/35458401/answer/3362587282)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2024-01-15]
+> Last update: [编辑于 2024-01-26]
 > Link:
 > Category: #【答集】/02-企管答集
 > Tag:
@@ -37,11 +37,11 @@
 
 其实呢？这种**显然数学不可持续的病态做法，仅仅是因为遇上了中国几千年来罕见的历史机遇才得以短暂成立的幻觉。**
 
-一旦低垂的果实被摘尽，发展进入无可取巧的硬桥硬马阶段，开始比拼管理的细节、决策的周密、计划的健壮，开始一寸山河一寸血的步步死战才能勉强寸进的时代，以前那种过度投机的做法就会随时酿成深刻的、天然就具有毁灭性的危机。
+一旦低垂的果实被摘尽，发展进入无可取巧的硬桥硬马阶段，开始比拼管理的细节、决策的周密、计划的健壮，开始一寸山河一寸血的步步死战才能勉强寸进，以前那种过度投机的做法就会随时酿成深刻的、毁灭性的危机。
 
-因为第一代、第二代的企业家们因为时代的宠爱，恃宠而骄，过于不把“稳健”看在眼里，甚至加以“保守”、“软弱”的污名加以排斥、避讳，所以ta们一旦遇到了意料外的不顺利，就会毫无后手突然如同纸牌屋一样轰然倒塌。
+第一代、第二代的企业家们因为时代的宠爱，恃宠而骄，过于不把“稳健”看在眼里，甚至加以“保守”、“软弱”的污名加以排斥、避讳，所以ta们一旦遇到了意料外的不顺利，就会毫无后手突然如同纸牌屋一样轰然倒塌。
 
-资金链资金链，十斤铁打一米链，哪有那么容易断裂？但一斤铁要打十米链，断裂当然只是迟早的事。
+资金链资金链，十斤铁打一米链，哪有那么容易断裂？但一斤铁要打十米链，链条还没曲别针结实，轻轻一绷就要断裂，断裂当然只是迟早的事。
 
 而且按照这一惯的高杠杆习惯，一旦兜不住，那就是万劫不复、粉身碎骨。
 
