--- a/【文章目录】/【4 - 应用科学】/490 - 商学/494 - 企业管理/泰坦号.md
+++ b/【文章目录】/【4 - 应用科学】/490 - 商学/494 - 企业管理/泰坦号.md
@@ -2,7 +2,7 @@
 [失联潜水器「泰坦」号氧气预计已耗尽，舱内 5 人生死未卜，氧气耗尽后会发生什么？救援是否会有奇迹出现？](https://www.zhihu.com/question/608002171/answer/3085768606)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-06-23]
+> Last update: [编辑于 2024-01-28]
 > Link:
 > Category: #【答集】/02-企管答集 #【答集】/04-社科答集
 > Tag: #4-世界史/4A-社科
@@ -24,3 +24,7 @@
 1）学好会计学，算好对方的生意能不能收支平衡，对理论利润率过低、理论投资回收期过长的服务保持足够警惕，是一种可以保命的技能。
 
 2）不管项目本身听起来多有噱头、多蓝海，核算成本要严谨、周密、专业，如果严谨核算后利润率太低，不要勉强去做。
+
+  
+
+[美国失联深海潜水器发生「灾难性内爆」，5 名乘员死亡，「内爆」是如何发生的？此次事故将产生哪些影响？​www.zhihu.com/question/608085455/answer/3086489813?utm_psn=1734777868918521856](https://www.zhihu.com/question/608085455/answer/3086489813?utm_psn=1734777868918521856)
