--- a/【本周更新】/跌打酒.md
+++ b/【本周更新】/跌打酒.md
@@ -2,9 +2,9 @@
 [如何理解心理学教授徐洁分享的「原生家庭概念在当下被放大是社会的进步」？](https://www.zhihu.com/question/639789044/answer/3370716360)
 
 > Author: #0-Anonymity
-> Last update: [发布于 2024-01-21]
+> Last update: [编辑于 2024-01-21]
 > Link:
-> Category: #【答集】/05-科学答集 #【答集】/01-家族答集
+> Category: #【答集】/04-社科答集 #【答集】/01-家族答集
 > Tag: 
 > 评论区:
 > 泛讨论:
@@ -50,8 +50,6 @@
 社会真正需要的进步，是重新反思建构在资本主义、物质主义之上的个人主义、纵欲主义的价值观，而不是为这些价值观服务的新技术、新方法。
 
 山鸡哥们需要的是离开社团，而不是庆祝社团找到了更好的跌打酒配方。
-
-  
 
 **你的不幸的根源不是你有“不幸的遭遇”，而是你用了一些用起来更轻松、但会带来诅咒的方式在对付这些遭遇带来的痛苦。**
 
