--- a/【本周更新】/龙门教.md
+++ b/【本周更新】/龙门教.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2024-01-21]
 > Link:
-> Category: #【答集】/04-社科答集
+> Category: #【答集】/01-家族答集
 > Tag: 
 > 评论区:
 > 泛讨论:
